// Package genesis åˆ›ä¸–åŒºå—æ„å»ºå®ç°
//
// ğŸ¯ **åˆ›ä¸–åŒºå—ä¸“ä¸šæ„å»º**
//
// æœ¬æ–‡ä»¶ä¸“é—¨å¤„ç†åˆ›ä¸–åŒºå—çš„æ„å»ºé€»è¾‘ï¼ŒåŒ…æ‹¬ï¼š
// - åˆ›ä¸–åŒºå—å¤´æ„å»ºï¼šè®¾ç½®ç‰¹æ®Šçš„åˆ›ä¸–åŒºå—å¤´å­—æ®µ
// - Merkleæ ¹è®¡ç®—ï¼šä½¿ç”¨åˆ›ä¸–äº¤æ˜“è®¡ç®—Merkleæ ¹
// - çŠ¶æ€æ ¹å¤„ç†ï¼šå¤„ç†åˆå§‹UTXOçŠ¶æ€æ ¹
// - åˆ›ä¸–å‚æ•°è®¾ç½®ï¼šéš¾åº¦ã€æ—¶é—´æˆ³ã€ç‰ˆæœ¬ç­‰ç‰¹æ®Šå¤„ç†
//
// ğŸ—ï¸ **è®¾è®¡åŸåˆ™**
// - ä¸“ä¸šåˆ†å·¥ï¼šä¸“é—¨å¤„ç†åˆ›ä¸–åŒºå—æ„å»ºä¸šåŠ¡é€»è¾‘
// - é…ç½®é©±åŠ¨ï¼šå®Œå…¨åŸºäºGenesisConfigå’Œåˆ›ä¸–äº¤æ˜“
// - ç¡®å®šæ€§æ„å»ºï¼šç›¸åŒè¾“å…¥äº§ç”Ÿç›¸åŒçš„åˆ›ä¸–åŒºå—
// - åŸå­æ€§æ“ä½œï¼šè¦ä¹ˆå…¨éƒ¨æˆåŠŸè¦ä¹ˆå…¨éƒ¨å¤±è´¥
package genesis

import (
	"context"
	"fmt"

	// å…¬å…±æ¥å£
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/crypto"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/log"
	"github.com/weisyn/v1/pkg/interfaces/repository"

	// åè®®å®šä¹‰
	core "github.com/weisyn/v1/pb/blockchain/block"
	transaction "github.com/weisyn/v1/pb/blockchain/block/transaction"
	"github.com/weisyn/v1/pkg/types"
)

// ==================== åˆ›ä¸–åŒºå—æ„å»ºå®ç° ====================

// BuildBlock æ„å»ºåˆ›ä¸–åŒºå—
//
// ğŸ¯ **åˆ›ä¸–åŒºå—æ„å»ºæœåŠ¡**
//
// åŸºäºåˆ›ä¸–äº¤æ˜“å’Œé…ç½®æ„å»ºå®Œæ•´çš„åˆ›ä¸–åŒºå—ï¼ŒåŒ…æ‹¬ï¼š
// 1. æ„å»ºåˆ›ä¸–åŒºå—å¤´ï¼šè®¾ç½®ç‰¹æ®Šçš„åˆ›ä¸–åŒºå—å¤´å­—æ®µ
// 2. è®¡ç®—Merkleæ ¹ï¼šä½¿ç”¨åˆ›ä¸–äº¤æ˜“è®¡ç®—Merkleæ ¹
// 3. è®¾ç½®åˆ›ä¸–å‚æ•°ï¼šéš¾åº¦ã€æ—¶é—´æˆ³ã€ç‰ˆæœ¬ç­‰
// 4. è®¡ç®—çŠ¶æ€æ ¹ï¼šåŸºäºåˆå§‹UTXOçŠ¶æ€
//
// å‚æ•°ï¼š
//   - ctx: æ“ä½œä¸Šä¸‹æ–‡
//   - genesisTransactions: åˆ›ä¸–äº¤æ˜“åˆ—è¡¨
//   - genesisConfig: åˆ›ä¸–é…ç½®ä¿¡æ¯
//   - txHashServiceClient: äº¤æ˜“å“ˆå¸ŒæœåŠ¡å®¢æˆ·ç«¯
//   - merkleTreeManager: Merkleæ ‘ç®¡ç†æœåŠ¡
//   - utxoManager: UTXOç®¡ç†æœåŠ¡
//   - logger: æ—¥å¿—æœåŠ¡
//
// è¿”å›ï¼š
//   - *core.Block: æ„å»ºå®Œæˆçš„åˆ›ä¸–åŒºå—
//   - error: æ„å»ºè¿‡ç¨‹ä¸­çš„é”™è¯¯
func BuildBlock(
	ctx context.Context,
	genesisTransactions []*transaction.Transaction,
	genesisConfig interface{},
	txHashServiceClient transaction.TransactionHashServiceClient,
	merkleTreeManager crypto.MerkleTreeManager,
	utxoManager repository.UTXOManager,
	logger log.Logger,
) (*core.Block, error) {
	if logger != nil {
		logger.Infof("å¼€å§‹æ„å»ºåˆ›ä¸–åŒºå—ï¼Œäº¤æ˜“æ•°: %d", len(genesisTransactions))
	}

	// ç±»å‹è½¬æ¢é…ç½®
	config, ok := genesisConfig.(*types.GenesisConfig)
	if !ok {
		return nil, fmt.Errorf("æ— æ•ˆçš„åˆ›ä¸–é…ç½®ç±»å‹: %T", genesisConfig)
	}

	if config == nil {
		return nil, fmt.Errorf("åˆ›ä¸–é…ç½®ä¸èƒ½ä¸ºç©º")
	}

	if len(genesisTransactions) == 0 {
		return nil, fmt.Errorf("åˆ›ä¸–äº¤æ˜“åˆ—è¡¨ä¸èƒ½ä¸ºç©º")
	}

	// 1. è®¡ç®—Merkleæ ¹ï¼ˆä½¿ç”¨ç»Ÿä¸€äº¤æ˜“å“ˆå¸ŒæœåŠ¡ + MerkleTreeManagerï¼‰
	merkleRoot, err := calculateMerkleRoot(ctx, genesisTransactions, txHashServiceClient, merkleTreeManager, logger)
	if err != nil {
		return nil, fmt.Errorf("è®¡ç®—åˆ›ä¸–åŒºå—Merkleæ ¹å¤±è´¥: %w", err)
	}

	// 2. è·å–åˆå§‹UTXOçŠ¶æ€æ ¹ï¼ˆåˆ›ä¸–å‰åº”è¯¥æ˜¯ç©ºçŠ¶æ€ï¼‰
	stateRoot, err := utxoManager.GetCurrentStateRoot(ctx)
	if err != nil {
		if logger != nil {
			logger.Debugf("è·å–åˆå§‹çŠ¶æ€æ ¹å¤±è´¥ï¼Œä½¿ç”¨ç©ºçŠ¶æ€æ ¹: %v", err)
		}
		stateRoot = make([]byte, 32) // ä½¿ç”¨å…¨é›¶çŠ¶æ€æ ¹
	}

	// 3. æ„å»ºåˆ›ä¸–åŒºå—å¤´
	genesisHeader := &core.BlockHeader{
		ChainId:      config.ChainID,           // âœ… ä»é…ç½®è·å–é“¾IDï¼Œé˜²æ­¢è·¨é“¾é‡æ”¾æ”»å‡»
		Version:      1,                        // åè®®ç‰ˆæœ¬
		PreviousHash: make([]byte, 32),         // åˆ›ä¸–åŒºå—ï¼šçˆ¶å“ˆå¸Œä¸ºå…¨é›¶
		MerkleRoot:   merkleRoot,               // äº¤æ˜“Merkleæ ¹
		Timestamp:    uint64(config.Timestamp), // ä½¿ç”¨é…ç½®ä¸­çš„æ—¶é—´æˆ³
		Height:       0,                        // åˆ›ä¸–åŒºå—é«˜åº¦ä¸º0
		Nonce:        make([]byte, 8),          // Nonceä¸ºç©ºï¼ˆåˆ›ä¸–åŒºå—æ— POWï¼‰
		Difficulty:   1,                        // åˆ›ä¸–åŒºå—å›ºå®šéš¾åº¦
		StateRoot:    stateRoot,                // UTXOçŠ¶æ€æ ¹
	}

	// 4. æ„å»ºåˆ›ä¸–åŒºå—ä½“
	genesisBody := &core.BlockBody{
		Transactions: genesisTransactions,
	}

	// 5. ç»„è£…å®Œæ•´åˆ›ä¸–åŒºå—
	genesisBlock := &core.Block{
		Header: genesisHeader,
		Body:   genesisBody,
	}

	if logger != nil {
		logger.Infof("âœ… åˆ›ä¸–åŒºå—æ„å»ºå®Œæˆï¼Œé«˜åº¦: %d, äº¤æ˜“æ•°: %d, Merkleæ ¹: %x",
			genesisBlock.Header.Height, len(genesisTransactions), merkleRoot)
	}

	return genesisBlock, nil
}

// ==================== å†…éƒ¨è¾…åŠ©å‡½æ•° ====================

// calculateMerkleRoot è®¡ç®—åˆ›ä¸–äº¤æ˜“çš„Merkleæ ¹
func calculateMerkleRoot(
	ctx context.Context,
	transactions []*transaction.Transaction,
	txHashServiceClient transaction.TransactionHashServiceClient,
	merkleTreeManager crypto.MerkleTreeManager,
	logger log.Logger,
) ([]byte, error) {
	if len(transactions) == 0 {
		return nil, fmt.Errorf("äº¤æ˜“åˆ—è¡¨ä¸èƒ½ä¸ºç©º")
	}

	if txHashServiceClient == nil {
		return nil, fmt.Errorf("äº¤æ˜“å“ˆå¸ŒæœåŠ¡å®¢æˆ·ç«¯ä¸èƒ½ä¸ºç©º")
	}

	// æå–äº¤æ˜“å“ˆå¸Œåˆ—è¡¨ï¼ˆé€šè¿‡ç»Ÿä¸€å“ˆå¸ŒæœåŠ¡è®¡ç®—ï¼‰
	txHashes := make([][]byte, 0, len(transactions))
	for i, tx := range transactions {
		if tx == nil {
			return nil, fmt.Errorf("äº¤æ˜“[%d]ä¸èƒ½ä¸ºç©º", i)
		}
		req := &transaction.ComputeHashRequest{Transaction: tx, IncludeDebugInfo: false}
		resp, err := txHashServiceClient.ComputeHash(ctx, req)
		if err != nil {
			return nil, fmt.Errorf("è®¡ç®—äº¤æ˜“[%d]å“ˆå¸Œå¤±è´¥: %w", i, err)
		}
		if resp == nil || !resp.IsValid || len(resp.Hash) == 0 {
			return nil, fmt.Errorf("äº¤æ˜“[%d]å“ˆå¸Œæ— æ•ˆ", i)
		}
		txHashes = append(txHashes, resp.Hash)
	}

	// ä½¿ç”¨Merkleæ ‘ç®¡ç†å™¨è®¡ç®—æ ¹å“ˆå¸Œ
	merkleTree, err := merkleTreeManager.NewMerkleTree(txHashes)
	if err != nil {
		return nil, fmt.Errorf("åˆ›å»ºMerkleæ ‘å¤±è´¥: %w", err)
	}
	merkleRoot := merkleTree.GetRoot()

	if logger != nil {
		logger.Debugf("åˆ›ä¸–åŒºå—Merkleæ ¹è®¡ç®—å®Œæˆ: %x", merkleRoot)
	}

	return merkleRoot, nil
}
