// Package genesis åˆ›ä¸–åŒºå—éªŒè¯å®ç°
//
// ğŸ¯ **åˆ›ä¸–åŒºå—ä¸“ä¸šéªŒè¯**
//
// æœ¬æ–‡ä»¶ä¸“é—¨å¤„ç†åˆ›ä¸–åŒºå—çš„éªŒè¯é€»è¾‘ï¼ŒåŒ…æ‹¬ï¼š
// - åˆ›ä¸–åŒºå—ç»“æ„éªŒè¯ï¼šåŒºå—å¤´å’ŒåŒºå—ä½“çš„å®Œæ•´æ€§
// - åˆ›ä¸–ç‰¹æ®Šå±æ€§éªŒè¯ï¼šé«˜åº¦ä¸º0ã€çˆ¶å“ˆå¸Œä¸ºå…¨é›¶ç­‰
// - Merkleæ ¹éªŒè¯ï¼šéªŒè¯äº¤æ˜“Merkleæ ¹çš„æ­£ç¡®æ€§
// - åˆ›ä¸–è§„åˆ™éªŒè¯ï¼šè·³è¿‡POWéªŒè¯ã€è·³è¿‡çˆ¶åŒºå—æ£€æŸ¥ç­‰
//
// ğŸ—ï¸ **è®¾è®¡åŸåˆ™**
// - ä¸“ä¸šåˆ†å·¥ï¼šä¸“é—¨å¤„ç†åˆ›ä¸–åŒºå—éªŒè¯ä¸šåŠ¡é€»è¾‘
// - ä¸¥æ ¼éªŒè¯ï¼šç¡®ä¿åˆ›ä¸–åŒºå—ç¬¦åˆæ‰€æœ‰è§„åˆ™
// - ç‰¹æ®Šå¤„ç†ï¼šä½¿ç”¨åˆ›ä¸–åŒºå—ä¸“ç”¨çš„éªŒè¯è§„åˆ™
// - æ˜ç¡®é”™è¯¯ï¼šæä¾›è¯¦ç»†çš„éªŒè¯å¤±è´¥ä¿¡æ¯
package genesis

import (
	"context"
	"fmt"

	// å…¬å…±æ¥å£
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/crypto"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/log"

	// åè®®å®šä¹‰
	core "github.com/weisyn/v1/pb/blockchain/block"
	transaction "github.com/weisyn/v1/pb/blockchain/block/transaction"
)

// ==================== åˆ›ä¸–åŒºå—éªŒè¯å®ç° ====================

// ValidateBlock éªŒè¯åˆ›ä¸–åŒºå—
//
// ğŸ¯ **åˆ›ä¸–åŒºå—éªŒè¯æœåŠ¡**
//
// å¯¹åˆ›ä¸–åŒºå—è¿›è¡Œä¸“é—¨éªŒè¯ï¼Œä½¿ç”¨åˆ›ä¸–åŒºå—çš„ç‰¹æ®ŠéªŒè¯è§„åˆ™ï¼š
// 1. ç»“æ„éªŒè¯ï¼šåŒºå—å¤´å’ŒåŒºå—ä½“çš„å®Œæ•´æ€§
// 2. åˆ›ä¸–ç‰¹æ®ŠéªŒè¯ï¼šé«˜åº¦ä¸º0ã€çˆ¶å“ˆå¸Œä¸ºå…¨é›¶
// 3. äº¤æ˜“éªŒè¯ï¼šéªŒè¯åˆ›ä¸–äº¤æ˜“çš„æœ‰æ•ˆæ€§
// 4. Merkleæ ¹éªŒè¯ï¼šéªŒè¯äº¤æ˜“Merkleæ ¹çš„æ­£ç¡®æ€§
// 5. è·³è¿‡POWéªŒè¯ï¼šåˆ›ä¸–åŒºå—ä¸éœ€è¦å·¥ä½œé‡è¯æ˜
// 6. è·³è¿‡çˆ¶åŒºå—æ£€æŸ¥ï¼šåˆ›ä¸–åŒºå—æ²¡æœ‰çˆ¶åŒºå—
//
// å‚æ•°ï¼š
//   - ctx: æ“ä½œä¸Šä¸‹æ–‡
//   - genesisBlock: å¾…éªŒè¯çš„åˆ›ä¸–åŒºå—
//   - txHashServiceClient: äº¤æ˜“å“ˆå¸ŒæœåŠ¡å®¢æˆ·ç«¯
//   - merkleTreeManager: Merkleæ ‘ç®¡ç†æœåŠ¡
//   - logger: æ—¥å¿—æœåŠ¡
//
// è¿”å›ï¼š
//   - bool: éªŒè¯ç»“æœï¼Œtrueè¡¨ç¤ºé€šè¿‡
//   - error: éªŒè¯è¿‡ç¨‹ä¸­çš„é”™è¯¯
func ValidateBlock(
	ctx context.Context,
	genesisBlock *core.Block,
	txHashServiceClient transaction.TransactionHashServiceClient,
	merkleTreeManager crypto.MerkleTreeManager,
	logger log.Logger,
) (bool, error) {
	if logger != nil {
		logger.Infof("å¼€å§‹éªŒè¯åˆ›ä¸–åŒºå—")
	}

	// åŸºç¡€ç»“æ„éªŒè¯
	if genesisBlock == nil {
		return false, fmt.Errorf("åˆ›ä¸–åŒºå—ä¸èƒ½ä¸ºç©º")
	}

	if genesisBlock.Header == nil {
		return false, fmt.Errorf("åˆ›ä¸–åŒºå—å¤´ä¸èƒ½ä¸ºç©º")
	}

	if genesisBlock.Body == nil {
		return false, fmt.Errorf("åˆ›ä¸–åŒºå—ä½“ä¸èƒ½ä¸ºç©º")
	}

	// éªŒè¯åˆ›ä¸–åŒºå—ç‰¹æ®Šå±æ€§
	if genesisBlock.Header.Height != 0 {
		return false, fmt.Errorf("åˆ›ä¸–åŒºå—é«˜åº¦å¿…é¡»ä¸º0ï¼Œå½“å‰ä¸º: %d", genesisBlock.Header.Height)
	}

	// éªŒè¯çˆ¶åŒºå—å“ˆå¸Œä¸ºå…¨é›¶
	if len(genesisBlock.Header.PreviousHash) != 32 {
		return false, fmt.Errorf("åˆ›ä¸–åŒºå—çˆ¶å“ˆå¸Œé•¿åº¦å¿…é¡»ä¸º32å­—èŠ‚ï¼Œå½“å‰ä¸º: %d", len(genesisBlock.Header.PreviousHash))
	}

	for i, b := range genesisBlock.Header.PreviousHash {
		if b != 0 {
			return false, fmt.Errorf("åˆ›ä¸–åŒºå—çˆ¶å“ˆå¸Œç¬¬%då­—èŠ‚å¿…é¡»ä¸º0ï¼Œå½“å‰ä¸º: %02x", i, b)
		}
	}

	// éªŒè¯æ—¶é—´æˆ³
	if genesisBlock.Header.Timestamp == 0 {
		return false, fmt.Errorf("åˆ›ä¸–åŒºå—æ—¶é—´æˆ³ä¸èƒ½ä¸º0")
	}

	// éªŒè¯äº¤æ˜“åˆ—è¡¨
	if len(genesisBlock.Body.Transactions) == 0 {
		return false, fmt.Errorf("åˆ›ä¸–åŒºå—äº¤æ˜“åˆ—è¡¨ä¸èƒ½ä¸ºç©º")
	}

	// éªŒè¯Merkleæ ¹ï¼ˆä½¿ç”¨ç»Ÿä¸€äº¤æ˜“å“ˆå¸ŒæœåŠ¡ + MerkleTreeManagerï¼‰
	valid, err := validateMerkleRoot(ctx, genesisBlock.Body.Transactions, genesisBlock.Header.MerkleRoot, txHashServiceClient, merkleTreeManager, logger)
	if err != nil {
		return false, fmt.Errorf("éªŒè¯åˆ›ä¸–åŒºå—Merkleæ ¹å¤±è´¥: %w", err)
	}
	if !valid {
		return false, fmt.Errorf("åˆ›ä¸–åŒºå—Merkleæ ¹ä¸åŒ¹é…")
	}

	if logger != nil {
		logger.Infof("âœ… åˆ›ä¸–åŒºå—éªŒè¯é€šè¿‡")
	}

	return true, nil
}

// ==================== å†…éƒ¨è¾…åŠ©å‡½æ•° ====================

// validateMerkleRoot éªŒè¯åˆ›ä¸–åŒºå—çš„Merkleæ ¹
func validateMerkleRoot(
	ctx context.Context,
	transactions []*transaction.Transaction,
	expectedMerkleRoot []byte,
	txHashServiceClient transaction.TransactionHashServiceClient,
	merkleTreeManager crypto.MerkleTreeManager,
	logger log.Logger,
) (bool, error) {
	if len(transactions) == 0 {
		return false, fmt.Errorf("äº¤æ˜“åˆ—è¡¨ä¸èƒ½ä¸ºç©º")
	}

	if len(expectedMerkleRoot) == 0 {
		return false, fmt.Errorf("æœŸæœ›çš„Merkleæ ¹ä¸èƒ½ä¸ºç©º")
	}

	if txHashServiceClient == nil {
		return false, fmt.Errorf("äº¤æ˜“å“ˆå¸ŒæœåŠ¡å®¢æˆ·ç«¯ä¸èƒ½ä¸ºç©º")
	}

	// è®¡ç®—æ¯ä¸ªäº¤æ˜“çš„å“ˆå¸Œ
	txHashes := make([][]byte, 0, len(transactions))
	for i, tx := range transactions {
		if tx == nil {
			return false, fmt.Errorf("äº¤æ˜“[%d]ä¸èƒ½ä¸ºç©º", i)
		}
		req := &transaction.ComputeHashRequest{Transaction: tx, IncludeDebugInfo: false}
		resp, err := txHashServiceClient.ComputeHash(ctx, req)
		if err != nil {
			return false, fmt.Errorf("è®¡ç®—äº¤æ˜“[%d]å“ˆå¸Œå¤±è´¥: %w", i, err)
		}
		if resp == nil || !resp.IsValid || len(resp.Hash) == 0 {
			return false, fmt.Errorf("äº¤æ˜“[%d]å“ˆå¸Œæ— æ•ˆ", i)
		}
		txHashes = append(txHashes, resp.Hash)
	}

	// ä½¿ç”¨Merkleæ ‘ç®¡ç†å™¨è®¡ç®—æ ¹å“ˆå¸Œ
	merkleTree, err := merkleTreeManager.NewMerkleTree(txHashes)
	if err != nil {
		return false, fmt.Errorf("åˆ›å»ºMerkleæ ‘å¤±è´¥: %w", err)
	}
	calculatedRoot := merkleTree.GetRoot()

	// æ¯”è¾ƒè®¡ç®—å‡ºçš„æ ¹å“ˆå¸Œä¸æœŸæœ›çš„æ ¹å“ˆå¸Œ
	if len(calculatedRoot) != len(expectedMerkleRoot) {
		return false, fmt.Errorf("Merkleæ ¹é•¿åº¦ä¸åŒ¹é…: è®¡ç®—å€¼é•¿åº¦=%d, æœŸæœ›å€¼é•¿åº¦=%d",
			len(calculatedRoot), len(expectedMerkleRoot))
	}

	for i, b := range calculatedRoot {
		if b != expectedMerkleRoot[i] {
			return false, fmt.Errorf("Merkleæ ¹ä¸åŒ¹é…: ä½ç½®%dè®¡ç®—å€¼=%02x, æœŸæœ›å€¼=%02x",
				i, b, expectedMerkleRoot[i])
		}
	}

	if logger != nil {
		logger.Debugf("åˆ›ä¸–åŒºå—Merkleæ ¹éªŒè¯é€šè¿‡: %x", calculatedRoot)
	}

	return true, nil
}
