// Package internal æä¾›äº¤æ˜“ç®¡ç†çš„å†…éƒ¨å·¥å…·å‡½æ•°
//
// ğŸ“‹ **hash_utils.go - äº¤æ˜“å“ˆå¸Œè®¡ç®—å·¥å…·å‡½æ•°**
//
// æœ¬æ–‡ä»¶æä¾›äº¤æ˜“å“ˆå¸Œè®¡ç®—ç›¸å…³çš„å·¥å…·å‡½æ•°ï¼Œç¡®ä¿å“ˆå¸Œè®¡ç®—çš„æ ‡å‡†åŒ–å’Œä¸€è‡´æ€§ã€‚
// æ”¯æŒå•ä¸ªäº¤æ˜“å“ˆå¸Œã€æ‰¹é‡äº¤æ˜“å“ˆå¸Œè®¡ç®—ç­‰æ ¸å¿ƒåŠŸèƒ½ã€‚
//
// ğŸ¯ **æ ¸å¿ƒèŒè´£**ï¼š
// - æ ‡å‡†åŒ–å“ˆå¸Œè®¡ç®—ï¼šè°ƒç”¨cryptoå±‚æœåŠ¡ç¡®ä¿è·¨å¹³å°ä¸€è‡´çš„å“ˆå¸Œç»“æœ
// - æ‰¹é‡å“ˆå¸Œå¤„ç†ï¼šæ”¯æŒé«˜æ•ˆçš„æ‰¹é‡äº¤æ˜“å“ˆå¸Œè®¡ç®—
// - å“ˆå¸ŒéªŒè¯ï¼šæä¾›äº¤æ˜“å“ˆå¸ŒéªŒè¯åŠŸèƒ½
// - å“ˆå¸Œç¼“å­˜ï¼šæ”¯æŒäº¤æ˜“å“ˆå¸Œç¼“å­˜ä»¥æå‡æ€§èƒ½
//
// ğŸ—ï¸ **è®¾è®¡ç‰¹ç‚¹**ï¼š
// - ç‹¬ç«‹å·¥å…·å‡½æ•°ï¼šä¸ä¾èµ–ç‰¹å®šç»“æ„ä½“ï¼Œé€šè¿‡å‚æ•°ä¼ é€’ä¾èµ–
// - ç¡®å®šæ€§è®¡ç®—ï¼šç›¸åŒè¾“å…¥ä¿è¯ç›¸åŒè¾“å‡º
// - æœåŠ¡è°ƒç”¨ï¼šç»Ÿä¸€è°ƒç”¨cryptoå±‚çš„TransactionHashService
// - æ€§èƒ½ä¼˜åŒ–ï¼šæ”¯æŒæ‰¹é‡å¤„ç†å’Œç¼“å­˜æœºåˆ¶
// - é”™è¯¯å¤„ç†ï¼šæä¾›å®Œæ•´çš„é”™è¯¯å¤„ç†å’Œæ—¥å¿—è®°å½•
//
// ğŸ“‹ **ä½¿ç”¨æ–¹å¼**ï¼š
// å…¶ä»–å­æ¨¡å—å¯ç›´æ¥è°ƒç”¨è¿™äº›å·¥å…·å‡½æ•°ï¼š
//
//	import "github.com/weisyn/v1/internal/core/blockchain/transaction/internal"
//	hash, err := internal.ComputeTransactionHash(ctx, hashClient, tx)
package internal

import (
	"context"
	"fmt"

	transaction "github.com/weisyn/v1/pb/blockchain/block/transaction"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/log"
)

// ============================================================================
//                              å“ˆå¸Œç®—æ³•å¸¸é‡
// ============================================================================

// HashConstants å“ˆå¸Œè®¡ç®—ç›¸å…³å¸¸é‡
const (
	StandardHashLength = 32 // SHA-256æ ‡å‡†å“ˆå¸Œé•¿åº¦ï¼ˆå­—èŠ‚ï¼‰
	HashPrefix         = "tx_hash:"
	BatchHashPrefix    = "batch_hash:"
)

// ============================================================================
//                              å•ä¸ªäº¤æ˜“å“ˆå¸Œè®¡ç®—
// ============================================================================

// ComputeTransactionHash è®¡ç®—äº¤æ˜“å“ˆå¸Œ
//
// ğŸ¯ **æ ‡å‡†åŒ–äº¤æ˜“å“ˆå¸Œè®¡ç®—**
//
// é€šè¿‡è°ƒç”¨ç»Ÿä¸€çš„TransactionHashServiceè®¡ç®—äº¤æ˜“å“ˆå¸Œï¼Œç¡®ä¿è®¡ç®—ç»“æœçš„
// ç¡®å®šæ€§å’Œè·¨å¹³å°ä¸€è‡´æ€§ã€‚
//
// ğŸ”’ **ç¡®å®šæ€§ä¿è¯**ï¼š
// - å›ºå®šç®—æ³•ï¼šSHA-256
// - æ ‡å‡†åºåˆ—åŒ–ï¼šProtobufç¡®å®šæ€§åºåˆ—åŒ–
// - è·¨å¹³å°ä¸€è‡´ï¼šä»»ä½•è®¾å¤‡è®¡ç®—åŒä¸€äº¤æ˜“å¾—åˆ°ç›¸åŒå“ˆå¸Œ
//
// ğŸ’¡ **å‚æ•°è¯´æ˜**ï¼š
//   - ctx: ä¸Šä¸‹æ–‡å¯¹è±¡
//   - hashServiceClient: äº¤æ˜“å“ˆå¸ŒæœåŠ¡å®¢æˆ·ç«¯
//   - tx: éœ€è¦è®¡ç®—å“ˆå¸Œçš„äº¤æ˜“å¯¹è±¡
//   - includeDebugInfo: æ˜¯å¦åŒ…å«è°ƒè¯•ä¿¡æ¯ï¼ˆä¸å½±å“å“ˆå¸Œè®¡ç®—ï¼‰
//   - logger: æ—¥å¿—è®°å½•å™¨ï¼ˆå¯é€‰ï¼‰
//
// ğŸ’¡ **è¿”å›å€¼è¯´æ˜**ï¼š
//   - []byte: 32å­—èŠ‚çš„æ ‡å‡†åŒ–äº¤æ˜“å“ˆå¸Œ
//   - error: è®¡ç®—è¿‡ç¨‹ä¸­çš„é”™è¯¯ï¼Œnilè¡¨ç¤ºè®¡ç®—æˆåŠŸ
func ComputeTransactionHash(
	ctx context.Context,
	hashServiceClient transaction.TransactionHashServiceClient,
	tx *transaction.Transaction,
	includeDebugInfo bool,
	logger log.Logger,
) ([]byte, error) {
	if tx == nil {
		return nil, fmt.Errorf("äº¤æ˜“ä¸ºç©ºï¼Œæ— æ³•è®¡ç®—å“ˆå¸Œ")
	}
	if hashServiceClient == nil {
		return nil, fmt.Errorf("å“ˆå¸ŒæœåŠ¡å®¢æˆ·ç«¯ä¸ºç©º")
	}

	if logger != nil {
		logger.Debug(fmt.Sprintf("ğŸ§® å¼€å§‹è®¡ç®—äº¤æ˜“å“ˆå¸Œ - ç‰ˆæœ¬: %d, è¾“å…¥æ•°: %d, è¾“å‡ºæ•°: %d",
			tx.Version, len(tx.Inputs), len(tx.Outputs)))
	}

	// æ„é€  ComputeHashRequest
	req := &transaction.ComputeHashRequest{
		Transaction:      tx,
		IncludeDebugInfo: includeDebugInfo,
	}

	// è°ƒç”¨ gRPC TransactionHashService è®¡ç®—å“ˆå¸Œ
	resp, err := hashServiceClient.ComputeHash(ctx, req)
	if err != nil {
		return nil, fmt.Errorf("è°ƒç”¨äº¤æ˜“å“ˆå¸ŒæœåŠ¡å¤±è´¥: %w", err)
	}

	// éªŒè¯å“åº”ç»“æœ
	if resp == nil {
		return nil, fmt.Errorf("äº¤æ˜“å“ˆå¸ŒæœåŠ¡è¿”å›ç©ºå“åº”")
	}
	if !resp.IsValid {
		return nil, fmt.Errorf("äº¤æ˜“å“ˆå¸Œè®¡ç®—å¤±è´¥ï¼šäº¤æ˜“æ ¼å¼æ— æ•ˆ")
	}
	if len(resp.Hash) != StandardHashLength {
		return nil, fmt.Errorf("äº¤æ˜“å“ˆå¸Œé•¿åº¦ä¸æ­£ç¡®: æœŸæœ› %d å­—èŠ‚, å®é™… %d å­—èŠ‚",
			StandardHashLength, len(resp.Hash))
	}

	if logger != nil {
		logger.Debug(fmt.Sprintf("âœ… æˆåŠŸè®¡ç®—äº¤æ˜“å“ˆå¸Œ - å“ˆå¸Œ: %x", resp.Hash))
	}

	return resp.Hash, nil
}

// ValidateTransactionHash éªŒè¯äº¤æ˜“å“ˆå¸Œ
//
// ğŸ¯ **äº¤æ˜“å“ˆå¸ŒéªŒè¯å·¥å…·**
//
// éªŒè¯ç»™å®šäº¤æ˜“çš„å“ˆå¸Œæ˜¯å¦æ­£ç¡®ï¼Œé€šè¿‡é‡æ–°è®¡ç®—å“ˆå¸Œå¹¶ä¸æœŸæœ›å€¼æ¯”è¾ƒã€‚
//
// ğŸ’¡ **å‚æ•°è¯´æ˜**ï¼š
//   - ctx: ä¸Šä¸‹æ–‡å¯¹è±¡
//   - hashServiceClient: äº¤æ˜“å“ˆå¸ŒæœåŠ¡å®¢æˆ·ç«¯
//   - tx: éœ€è¦éªŒè¯çš„äº¤æ˜“å¯¹è±¡
//   - expectedHash: æœŸæœ›çš„å“ˆå¸Œå€¼
//   - logger: æ—¥å¿—è®°å½•å™¨ï¼ˆå¯é€‰ï¼‰
//
// ğŸ’¡ **è¿”å›å€¼è¯´æ˜**ï¼š
//   - bool: éªŒè¯ç»“æœï¼ˆtrue=å“ˆå¸Œæ­£ç¡®ï¼Œfalse=å“ˆå¸Œä¸åŒ¹é…ï¼‰
//   - error: éªŒè¯è¿‡ç¨‹ä¸­çš„é”™è¯¯
func ValidateTransactionHash(
	ctx context.Context,
	hashServiceClient transaction.TransactionHashServiceClient,
	tx *transaction.Transaction,
	expectedHash []byte,
	logger log.Logger,
) (bool, error) {
	if tx == nil {
		return false, fmt.Errorf("äº¤æ˜“ä¸ºç©ºï¼Œæ— æ³•éªŒè¯å“ˆå¸Œ")
	}
	if len(expectedHash) != StandardHashLength {
		return false, fmt.Errorf("æœŸæœ›å“ˆå¸Œé•¿åº¦ä¸æ­£ç¡®: %d", len(expectedHash))
	}

	if logger != nil {
		logger.Debug(fmt.Sprintf("ğŸ” å¼€å§‹éªŒè¯äº¤æ˜“å“ˆå¸Œ - æœŸæœ›: %x", expectedHash))
	}

	// æ„é€ éªŒè¯è¯·æ±‚
	req := &transaction.ValidateHashRequest{
		Transaction:  tx,
		ExpectedHash: expectedHash,
	}

	// è°ƒç”¨éªŒè¯æœåŠ¡
	resp, err := hashServiceClient.ValidateHash(ctx, req)
	if err != nil {
		return false, fmt.Errorf("è°ƒç”¨å“ˆå¸ŒéªŒè¯æœåŠ¡å¤±è´¥: %w", err)
	}

	if resp == nil {
		return false, fmt.Errorf("å“ˆå¸ŒéªŒè¯æœåŠ¡è¿”å›ç©ºå“åº”")
	}

	if logger != nil {
		if resp.IsValid {
			logger.Debug(fmt.Sprintf("âœ… äº¤æ˜“å“ˆå¸ŒéªŒè¯é€šè¿‡ - å“ˆå¸Œ: %x", expectedHash))
		} else {
			logger.Debug(fmt.Sprintf("âŒ äº¤æ˜“å“ˆå¸ŒéªŒè¯å¤±è´¥ - æœŸæœ›: %x, å®é™…: %x",
				expectedHash, resp.ComputedHash))
		}
	}

	return resp.IsValid, nil
}

// ============================================================================
//                              æ‰¹é‡å“ˆå¸Œè®¡ç®—
// ============================================================================

// BatchComputeTransactionHashes æ‰¹é‡è®¡ç®—äº¤æ˜“å“ˆå¸Œ
//
// ğŸ¯ **é«˜æ•ˆçš„æ‰¹é‡å“ˆå¸Œè®¡ç®—**
//
// æ‰¹é‡è®¡ç®—å¤šä¸ªäº¤æ˜“çš„å“ˆå¸Œå€¼ï¼Œæ¯”å•ä¸ªè®¡ç®—æ›´é«˜æ•ˆã€‚
// é€‚ç”¨äºåŒºå—éªŒè¯ã€äº¤æ˜“æ± å¤„ç†ç­‰éœ€è¦æ‰¹é‡å“ˆå¸Œçš„åœºæ™¯ã€‚
//
// ğŸ’¡ **å‚æ•°è¯´æ˜**ï¼š
//   - ctx: ä¸Šä¸‹æ–‡å¯¹è±¡
//   - hashServiceClient: äº¤æ˜“å“ˆå¸ŒæœåŠ¡å®¢æˆ·ç«¯
//   - transactions: äº¤æ˜“åˆ—è¡¨
//   - logger: æ—¥å¿—è®°å½•å™¨ï¼ˆå¯é€‰ï¼‰
//
// ğŸ’¡ **è¿”å›å€¼è¯´æ˜**ï¼š
//   - [][]byte: å“ˆå¸Œåˆ—è¡¨ï¼ˆä¸è¾“å…¥äº¤æ˜“é¡ºåºå¯¹åº”ï¼‰
//   - error: è®¡ç®—é”™è¯¯
func BatchComputeTransactionHashes(
	ctx context.Context,
	hashServiceClient transaction.TransactionHashServiceClient,
	transactions []*transaction.Transaction,
	logger log.Logger,
) ([][]byte, error) {
	if hashServiceClient == nil {
		return nil, fmt.Errorf("å“ˆå¸ŒæœåŠ¡å®¢æˆ·ç«¯ä¸ºç©º")
	}
	if len(transactions) == 0 {
		return [][]byte{}, nil
	}

	if logger != nil {
		logger.Debug(fmt.Sprintf("ğŸ§® å¼€å§‹æ‰¹é‡è®¡ç®—äº¤æ˜“å“ˆå¸Œ - æ•°é‡: %d", len(transactions)))
	}

	hashes := make([][]byte, 0, len(transactions))

	// é€ä¸ªè®¡ç®—ï¼ˆåç»­å¯ä¼˜åŒ–ä¸ºçœŸæ­£çš„æ‰¹é‡æ¥å£ï¼‰
	for i, tx := range transactions {
		if tx == nil {
			return nil, fmt.Errorf("ç¬¬ %d ä¸ªäº¤æ˜“ä¸ºç©º", i)
		}

		hash, err := ComputeTransactionHash(ctx, hashServiceClient, tx, false, logger)
		if err != nil {
			return nil, fmt.Errorf("è®¡ç®—ç¬¬ %d ä¸ªäº¤æ˜“å“ˆå¸Œå¤±è´¥: %w", i, err)
		}

		hashes = append(hashes, hash)
	}

	if logger != nil {
		logger.Debug(fmt.Sprintf("âœ… æ‰¹é‡å“ˆå¸Œè®¡ç®—å®Œæˆ - %d ä¸ªå“ˆå¸Œ", len(hashes)))
	}

	return hashes, nil
}

// BatchValidateTransactionHashes æ‰¹é‡éªŒè¯äº¤æ˜“å“ˆå¸Œ
//
// ğŸ¯ **é«˜æ•ˆçš„æ‰¹é‡å“ˆå¸ŒéªŒè¯**
//
// æ‰¹é‡éªŒè¯å¤šä¸ªäº¤æ˜“çš„å“ˆå¸Œå€¼æ˜¯å¦æ­£ç¡®ã€‚
//
// ğŸ’¡ **å‚æ•°è¯´æ˜**ï¼š
//   - ctx: ä¸Šä¸‹æ–‡å¯¹è±¡
//   - hashServiceClient: äº¤æ˜“å“ˆå¸ŒæœåŠ¡å®¢æˆ·ç«¯
//   - transactions: äº¤æ˜“åˆ—è¡¨
//   - expectedHashes: æœŸæœ›çš„å“ˆå¸Œåˆ—è¡¨
//   - logger: æ—¥å¿—è®°å½•å™¨ï¼ˆå¯é€‰ï¼‰
//
// ğŸ’¡ **è¿”å›å€¼è¯´æ˜**ï¼š
//   - []bool: éªŒè¯ç»“æœåˆ—è¡¨ï¼ˆä¸è¾“å…¥é¡ºåºå¯¹åº”ï¼‰
//   - error: éªŒè¯é”™è¯¯
func BatchValidateTransactionHashes(
	ctx context.Context,
	hashServiceClient transaction.TransactionHashServiceClient,
	transactions []*transaction.Transaction,
	expectedHashes [][]byte,
	logger log.Logger,
) ([]bool, error) {
	if hashServiceClient == nil {
		return nil, fmt.Errorf("å“ˆå¸ŒæœåŠ¡å®¢æˆ·ç«¯ä¸ºç©º")
	}
	if len(transactions) != len(expectedHashes) {
		return nil, fmt.Errorf("äº¤æ˜“æ•°é‡ä¸æœŸæœ›å“ˆå¸Œæ•°é‡ä¸åŒ¹é…: %d vs %d",
			len(transactions), len(expectedHashes))
	}

	if logger != nil {
		logger.Debug(fmt.Sprintf("ğŸ” å¼€å§‹æ‰¹é‡éªŒè¯äº¤æ˜“å“ˆå¸Œ - æ•°é‡: %d", len(transactions)))
	}

	results := make([]bool, 0, len(transactions))

	for i, tx := range transactions {
		if tx == nil {
			return nil, fmt.Errorf("ç¬¬ %d ä¸ªäº¤æ˜“ä¸ºç©º", i)
		}

		isValid, err := ValidateTransactionHash(ctx, hashServiceClient, tx, expectedHashes[i], logger)
		if err != nil {
			return nil, fmt.Errorf("éªŒè¯ç¬¬ %d ä¸ªäº¤æ˜“å“ˆå¸Œå¤±è´¥: %w", i, err)
		}

		results = append(results, isValid)
	}

	// ç»Ÿè®¡éªŒè¯ç»“æœ
	validCount := 0
	for _, isValid := range results {
		if isValid {
			validCount++
		}
	}

	if logger != nil {
		logger.Debug(fmt.Sprintf("âœ… æ‰¹é‡å“ˆå¸ŒéªŒè¯å®Œæˆ - é€šè¿‡: %d/%d", validCount, len(results)))
	}

	return results, nil
}

// ============================================================================
//                              è°ƒè¯•å’Œå·¥å…·æ–¹æ³•
// ============================================================================

// ComputeTransactionHashWithDebug è®¡ç®—äº¤æ˜“å“ˆå¸Œï¼ˆåŒ…å«è°ƒè¯•ä¿¡æ¯ï¼‰
//
// ğŸ¯ **è°ƒè¯•å‹å¥½çš„å“ˆå¸Œè®¡ç®—**
//
// è®¡ç®—äº¤æ˜“å“ˆå¸Œå¹¶è¿”å›è¯¦ç»†çš„è°ƒè¯•ä¿¡æ¯ï¼Œç”¨äºå¼€å‘å’Œæµ‹è¯•é˜¶æ®µã€‚
//
// ğŸ’¡ **å‚æ•°è¯´æ˜**ï¼š
//   - ctx: ä¸Šä¸‹æ–‡å¯¹è±¡
//   - hashServiceClient: äº¤æ˜“å“ˆå¸ŒæœåŠ¡å®¢æˆ·ç«¯
//   - tx: äº¤æ˜“å¯¹è±¡
//   - logger: æ—¥å¿—è®°å½•å™¨ï¼ˆå¯é€‰ï¼‰
//
// ğŸ’¡ **è¿”å›å€¼è¯´æ˜**ï¼š
//   - []byte: äº¤æ˜“å“ˆå¸Œ
//   - *transaction.HashDebugInfo: è°ƒè¯•ä¿¡æ¯
//   - error: è®¡ç®—é”™è¯¯
func ComputeTransactionHashWithDebug(
	ctx context.Context,
	hashServiceClient transaction.TransactionHashServiceClient,
	tx *transaction.Transaction,
	logger log.Logger,
) ([]byte, *transaction.HashDebugInfo, error) {
	if tx == nil {
		return nil, nil, fmt.Errorf("äº¤æ˜“ä¸ºç©ºï¼Œæ— æ³•è®¡ç®—å“ˆå¸Œ")
	}
	if hashServiceClient == nil {
		return nil, nil, fmt.Errorf("å“ˆå¸ŒæœåŠ¡å®¢æˆ·ç«¯ä¸ºç©º")
	}

	// æ„é€ è°ƒè¯•è¯·æ±‚
	req := &transaction.ComputeHashRequest{
		Transaction:      tx,
		IncludeDebugInfo: true, // åŒ…å«è°ƒè¯•ä¿¡æ¯
	}

	// è°ƒç”¨æœåŠ¡
	resp, err := hashServiceClient.ComputeHash(ctx, req)
	if err != nil {
		return nil, nil, fmt.Errorf("è°ƒç”¨äº¤æ˜“å“ˆå¸ŒæœåŠ¡å¤±è´¥: %w", err)
	}

	if resp == nil {
		return nil, nil, fmt.Errorf("äº¤æ˜“å“ˆå¸ŒæœåŠ¡è¿”å›ç©ºå“åº”")
	}
	if !resp.IsValid {
		return nil, nil, fmt.Errorf("äº¤æ˜“å“ˆå¸Œè®¡ç®—å¤±è´¥ï¼šäº¤æ˜“æ ¼å¼æ— æ•ˆ")
	}

	if logger != nil {
		logger.Debug(fmt.Sprintf("ğŸ› è°ƒè¯•ä¿¡æ¯ - å“ˆå¸Œ: %x, å­—æ®µæ•°: %d",
			resp.Hash, len(resp.DebugInfo.GetIncludedFields())))
	}

	return resp.Hash, resp.DebugInfo, nil
}

// GetTransactionID è·å–äº¤æ˜“IDå­—ç¬¦ä¸²
//
// ğŸ¯ **ç”¨æˆ·å‹å¥½çš„äº¤æ˜“æ ‡è¯†ç¬¦**
//
// å°†äº¤æ˜“å“ˆå¸Œè½¬æ¢ä¸ºç”¨æˆ·å‹å¥½çš„å­—ç¬¦ä¸²æ ¼å¼ï¼Œç”¨äºæ˜¾ç¤ºå’ŒæŸ¥è¯¢ã€‚
//
// ğŸ’¡ **å‚æ•°è¯´æ˜**ï¼š
//   - ctx: ä¸Šä¸‹æ–‡å¯¹è±¡
//   - hashServiceClient: äº¤æ˜“å“ˆå¸ŒæœåŠ¡å®¢æˆ·ç«¯
//   - tx: äº¤æ˜“å¯¹è±¡
//   - logger: æ—¥å¿—è®°å½•å™¨ï¼ˆå¯é€‰ï¼‰
//
// ğŸ’¡ **è¿”å›å€¼è¯´æ˜**ï¼š
//   - string: åå…­è¿›åˆ¶æ ¼å¼çš„äº¤æ˜“IDå­—ç¬¦ä¸²
//   - error: è®¡ç®—é”™è¯¯
func GetTransactionID(
	ctx context.Context,
	hashServiceClient transaction.TransactionHashServiceClient,
	tx *transaction.Transaction,
	logger log.Logger,
) (string, error) {
	hash, err := ComputeTransactionHash(ctx, hashServiceClient, tx, false, logger)
	if err != nil {
		return "", fmt.Errorf("è®¡ç®—äº¤æ˜“å“ˆå¸Œå¤±è´¥: %w", err)
	}

	txID := fmt.Sprintf("%x", hash)

	if logger != nil {
		logger.Debug(fmt.Sprintf("ğŸ†” ç”Ÿæˆäº¤æ˜“ID - %s", txID))
	}

	return txID, nil
}

// ============================================================================
//                              ç¼–è¯‘æ—¶æ£€æŸ¥
// ============================================================================

// ç¡®ä¿åŒ…å«å¿…è¦çš„å¯¼å…¥å’Œç±»å‹æ£€æŸ¥
// ValidateHashLength éªŒè¯å“ˆå¸Œé•¿åº¦
//
// ğŸ¯ **å“ˆå¸Œé•¿åº¦éªŒè¯å·¥å…·**
//
// éªŒè¯ç»™å®šçš„å“ˆå¸Œæ˜¯å¦ä¸ºæ ‡å‡†é•¿åº¦ï¼ˆ32å­—èŠ‚ï¼‰ï¼Œç¡®ä¿å“ˆå¸Œæ ¼å¼çš„ä¸€è‡´æ€§ã€‚
//
// ğŸ’¡ **å‚æ•°è¯´æ˜**ï¼š
//   - hash: å¾…éªŒè¯çš„å“ˆå¸Œå­—èŠ‚æ•°ç»„
//
// ğŸ’¡ **è¿”å›å€¼è¯´æ˜**ï¼š
//   - error: éªŒè¯é”™è¯¯ï¼Œnilè¡¨ç¤ºé•¿åº¦æ­£ç¡®
func ValidateHashLength(hash []byte) error {
	const StandardHashLength = 32 // SHA256å“ˆå¸Œçš„æ ‡å‡†é•¿åº¦

	if len(hash) != StandardHashLength {
		return fmt.Errorf("å“ˆå¸Œé•¿åº¦ä¸æ­£ç¡®: æœŸæœ› %d å­—èŠ‚, å®é™… %d å­—èŠ‚",
			StandardHashLength, len(hash))
	}
	return nil
}

// ============================================================================
//                              å·¥å…·å‡½æ•°å’Œå¸¸é‡
// ============================================================================

var (
	_ = fmt.Sprintf          // ç¡®ä¿fmtåŒ…æ­£ç¡®å¯¼å…¥
	_ = context.Context(nil) // ç¡®ä¿contextåŒ…æ­£ç¡®å¯¼å…¥
)
