//go:build !android && !ios && cgo
// +build !android,!ios,cgo

// Package hsm æä¾› HSMï¼ˆHardware Security Moduleï¼‰ç­¾åå™¨å®ç°
//
// âœ… **ç”Ÿäº§çº§å®ç°**ï¼šé€‚ç”¨äºç”Ÿäº§ç¯å¢ƒçš„ç¡¬ä»¶çº§å®‰å…¨å¯†é’¥ç®¡ç†
//
// ğŸ¯ **é€‚ç”¨åœºæ™¯**ï¼š
// - ç”Ÿäº§ç¯å¢ƒï¼šé‡‘èçº§å®‰å…¨è¦æ±‚
// - å¤§é¢èµ„äº§ç®¡ç†ï¼šé“¶è¡Œçº§å®‰å…¨æ ‡å‡†
// - åˆè§„è¦æ±‚ï¼šFIPS 140-2 Level 3/4 è®¤è¯
// - æœ¬åœ°åŒ–éƒ¨ç½²ï¼šHSMè®¾å¤‡ç‰©ç†è¿æ¥æˆ–åŒç½‘ç»œéƒ¨ç½²
//
// ğŸ”’ **å®‰å…¨ç‰¹æ€§**ï¼š
// - ç¡¬ä»¶çº§å¯†é’¥ä¿æŠ¤ï¼šç§é’¥å­˜å‚¨åœ¨HSMè®¾å¤‡ä¸­ï¼Œæ°¸ä¸ç¦»å¼€ç¡¬ä»¶
// - PKCS#11æ ‡å‡†ï¼šé€šè¿‡æ ‡å‡†C APIä¸HSMè®¾å¤‡é€šä¿¡
// - ç‰©ç†é˜²ç¯¡æ”¹ï¼šFIPS 140-2 Level 3/4è®¤è¯
// - é«˜æ€§èƒ½ç­¾åï¼šç¡¬ä»¶åŠ é€Ÿï¼Œå¯è¾¾10000+ TPS
//
// ğŸŒ **æ”¯æŒçš„HSMå‚å•†**ï¼š
// - Thales Luna
// - AWS CloudHSM
// - YubiHSM
// - å…¶ä»–ç¬¦åˆPKCS#11æ ‡å‡†çš„HSMè®¾å¤‡
//
// ğŸ“‹ **è®¾è®¡åŸåˆ™**ï¼š
// - æ¥å£æŠ½è±¡ï¼šæ”¯æŒå¤šç§HSMå‚å•†
// - Sessionæ± ç®¡ç†ï¼šå¤ç”¨ä¼šè¯ï¼Œæå‡æ€§èƒ½
// - PINå®‰å…¨ç®¡ç†ï¼šå®‰å…¨å¤„ç†PINè¾“å…¥
// - é”™è¯¯åˆ†ç±»ï¼šåŒºåˆ†ä¸´æ—¶æ€§é”™è¯¯å’Œæ°¸ä¹…æ€§é”™è¯¯
package hsm

import (
	"context"
	"fmt"
	"time"

	"github.com/miekg/pkcs11"
	transaction "github.com/weisyn/v1/pb/blockchain/block/transaction"
	"github.com/weisyn/v1/internal/core/infrastructure/crypto/kms"
	cryptointf "github.com/weisyn/v1/pkg/interfaces/infrastructure/crypto"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/log"
)

// HSMSigner HSMç­¾åå™¨
//
// ğŸ¯ **æ ¸å¿ƒåŠŸèƒ½**ï¼šé€šè¿‡HSMè®¾å¤‡å¯¹äº¤æ˜“è¿›è¡Œç¡¬ä»¶çº§å®‰å…¨ç­¾å
//
// ğŸ”’ **å®‰å…¨ä¿è¯**ï¼š
// - ç§é’¥æ°¸ä¸æš´éœ²ï¼šç­¾åæ“ä½œåœ¨HSMç¡¬ä»¶å†…éƒ¨å®Œæˆ
// - ç‰©ç†é˜²ç¯¡æ”¹ï¼šHSMè®¾å¤‡æä¾›ç‰©ç†çº§å®‰å…¨ä¿æŠ¤
// - è®¿é—®å®¡è®¡ï¼šæ‰€æœ‰ç­¾åæ“ä½œè®°å½•å®¡è®¡æ—¥å¿—
//
// âœ… **å½“å‰çŠ¶æ€**ï¼šPKCS#11é›†æˆæ¡†æ¶
// - âœ… æ¥å£å®šä¹‰å’ŒåŸºç¡€ç»“æ„
// - âœ… Signå’ŒSignBytesæ–¹æ³•æ¡†æ¶
// - âœ… PKCS#11 CGOå°è£…ï¼ˆpkcs11_wrapper.goï¼‰
// - âš ï¸ Sessionæ± ç®¡ç†å¾…å®Œå–„
// - âš ï¸ PINå®‰å…¨ç®¡ç†å¾…å®Œå–„
type HSMSigner struct {
	keyLabel     string                              // å¯†é’¥æ ‡ç­¾
	publicKey    *transaction.PublicKey              // ç¼“å­˜çš„å…¬é’¥
	algorithm    transaction.SignatureAlgorithm      // ç­¾åç®—æ³•
	txHashClient transaction.TransactionHashServiceClient // äº¤æ˜“å“ˆå¸ŒæœåŠ¡å®¢æˆ·ç«¯ï¼ˆç”¨äºSignæ–¹æ³•ï¼‰
	logger       log.Logger                          // æ—¥å¿—æœåŠ¡
	pkcs11Ctx    *PKCS11Context                     // PKCS#11ä¸Šä¸‹æ–‡ï¼ˆå¯é€‰ï¼Œéœ€è¦CGOï¼‰
	keyHandle    pkcs11.ObjectHandle                 // å¯†é’¥å¯¹è±¡å¥æŸ„ï¼ˆå¯é€‰ï¼Œéœ€è¦CGOï¼‰
	pin          string                              // PINç ï¼ˆå·²è§£å¯†ï¼Œæ˜æ–‡ï¼‰
	sessionPool  *SessionPool                        // Sessionæ± ï¼ˆå¯é€‰ï¼‰
	encryptionManager cryptointf.EncryptionManager      // åŠ å¯†ç®¡ç†å™¨ï¼ˆç”¨äºPINè§£å¯†ï¼‰
	hashManager  cryptointf.HashManager                  // å“ˆå¸Œç®¡ç†å™¨ï¼ˆç”¨äºSignBytesï¼‰
}

// Config HSMSigneré…ç½®
type Config struct {
	// HSMå¯†é’¥æ ‡ç­¾
	KeyLabel string

	// ç­¾åç®—æ³•
	Algorithm transaction.SignatureAlgorithm

	// PKCS#11åº“è·¯å¾„
	LibraryPath string

	// PINé…ç½®ï¼ˆåŠ å¯†å­˜å‚¨çš„PINï¼‰
	EncryptedPIN string

	// KMSé…ç½®ï¼ˆç”¨äºä»KMSè·å–PINè§£å¯†å¯†ç ï¼‰
	KMSKeyID string   // KMSå¯†é’¥IDï¼ˆAWS KMSï¼‰
	KMSType  string   // KMSç±»å‹ï¼ˆaws, vault, azureï¼‰

	// HashiCorp Vaulté…ç½®ï¼ˆå¦‚æœKMSTypeä¸ºvaultï¼‰
	VaultAddr      string // Vaultåœ°å€
	VaultToken     string // Vault Token
	VaultSecretPath string // Vaultå¯†é’¥è·¯å¾„

	// PINå¯†ç æä¾›è€…ï¼ˆä»cryptoåŸºç¡€è®¾æ–½å±‚è·å–ï¼‰
	// å¦‚æœä¸ºnilï¼Œåˆ™ä½¿ç”¨ç¯å¢ƒå˜é‡æä¾›è€…ï¼ˆEnvPINPasswordProviderï¼‰
	PINPasswordProvider cryptointf.PINPasswordProvider

	// Sessionæ± å¤§å°
	SessionPoolSize int

	// ç¯å¢ƒæ ‡è¯†ï¼ˆç”¨äºæ—¥å¿—å’Œç›‘æ§ï¼‰
	Environment string
}

// DefaultConfig è¿”å›é»˜è®¤é…ç½®
func DefaultConfig() *Config {
	return &Config{
		Algorithm:       transaction.SignatureAlgorithm_SIGNATURE_ALGORITHM_ECDSA_SECP256K1,
		SessionPoolSize: 10,
		Environment:     "production",
	}
}

// NewHSMSigner åˆ›å»ºHSMç­¾åå™¨å®ä¾‹
//
// âœ… **å½“å‰å®ç°**ï¼šå®Œæ•´æ¡†æ¶
// - âœ… PKCS#11åº“åŠ è½½å’Œåˆå§‹åŒ–
// - âœ… Sessionæ± ç®¡ç†
// - âœ… PINè§£å¯†æœºåˆ¶
//
// å‚æ•°ï¼š
//   - config: HSMç­¾åå™¨é…ç½®
//   - txHashClient: äº¤æ˜“å“ˆå¸ŒæœåŠ¡å®¢æˆ·ç«¯ï¼ˆç”¨äºSignæ–¹æ³•ï¼‰
//   - encryptionManager: åŠ å¯†ç®¡ç†å™¨ï¼ˆç”¨äºPINè§£å¯†ï¼Œå¯é€‰ï¼‰
//   - hashManager: å“ˆå¸Œç®¡ç†å™¨ï¼ˆç”¨äºSignBytesæ–¹æ³•ï¼‰
//   - logger: æ—¥å¿—æœåŠ¡
//
// è¿”å›ï¼š
//   - *HSMSigner: ç­¾åå™¨å®ä¾‹
//   - error: åˆ›å»ºå¤±è´¥çš„åŸå› 
func NewHSMSigner(
	config *Config,
	txHashClient transaction.TransactionHashServiceClient,
	encryptionManager cryptointf.EncryptionManager,
	hashManager cryptointf.HashManager,
	logger log.Logger,
) (*HSMSigner, error) {
	if config == nil {
		return nil, fmt.Errorf("HSMé…ç½®ä¸èƒ½ä¸ºç©º")
	}

	if config.KeyLabel == "" {
		return nil, fmt.Errorf("HSMå¯†é’¥æ ‡ç­¾ä¸èƒ½ä¸ºç©º")
	}

	// âœ… **PKCS#11é›†æˆ**ï¼šå¦‚æœæä¾›äº†åº“è·¯å¾„ï¼Œåˆ™åˆå§‹åŒ–PKCS#11
	var pkcs11Ctx *PKCS11Context
	var keyHandle pkcs11.ObjectHandle = 0
	var publicKey *transaction.PublicKey
	var pin string
	var sessionPool *SessionPool

	if config.LibraryPath != "" {
		// åˆå§‹åŒ–PKCS#11ä¸Šä¸‹æ–‡
		var err error
		pkcs11Ctx, err = NewPKCS11Context(config.LibraryPath, logger)
		if err != nil {
			return nil, fmt.Errorf("PKCS#11åˆå§‹åŒ–å¤±è´¥: %w", err)
		}

		// æ‰“å¼€Sessionå¹¶ç™»å½•
		session, err := pkcs11Ctx.OpenSession(pkcs11.CKF_SERIAL_SESSION | pkcs11.CKF_RW_SESSION)
		if err != nil {
			pkcs11Ctx.Finalize()
			return nil, fmt.Errorf("æ‰“å¼€Sessionå¤±è´¥: %w", err)
		}

		// è§£å¯†PINï¼ˆå¦‚æœæä¾›äº†åŠ å¯†PINï¼‰
		if config.EncryptedPIN != "" {
			if encryptionManager == nil {
				pkcs11Ctx.CloseSession(session)
				pkcs11Ctx.Finalize()
				return nil, fmt.Errorf("éœ€è¦EncryptionManageræ¥è§£å¯†PIN")
			}
			
			// âœ… **çœŸå®å®ç°**ï¼šæ”¯æŒå¤šç§PINå¯†ç è·å–æ–¹å¼
			// 1. ä¼˜å…ˆä½¿ç”¨ KMSï¼ˆå¦‚æœé…ç½®äº† KMSKeyIDï¼‰
			// 2. å›é€€åˆ°ç¯å¢ƒå˜é‡ï¼ˆå¼€å‘/æµ‹è¯•ç¯å¢ƒï¼‰
			var pinPassword string
			var err error
			
			// âœ… **çœŸå®å®ç°**ï¼šä¼˜å…ˆä½¿ç”¨é…ç½®çš„PINå¯†ç æä¾›è€…ï¼Œå¦åˆ™ä½¿ç”¨ç¯å¢ƒå˜é‡æä¾›è€…
			ctx := context.Background()
			if config.PINPasswordProvider != nil {
				// ä½¿ç”¨é…ç½®çš„providerï¼ˆä»cryptoåŸºç¡€è®¾æ–½å±‚è·å–ï¼‰
				pinPassword, err = config.PINPasswordProvider.GetPINPassword(ctx, config.KMSKeyID)
			} else {
				// å›é€€åˆ°ç¯å¢ƒå˜é‡æä¾›è€…ï¼ˆåŸºç¡€å®ç°ï¼‰
				// ä½¿ç”¨cryptoåŸºç¡€è®¾æ–½å±‚çš„ç¯å¢ƒå˜é‡æä¾›è€…
				envProvider := kms.NewEnvPINPasswordProvider(logger)
				pinPassword, err = envProvider.GetPINPassword(ctx, config.KMSKeyID)
			}
			
			if err != nil {
				pkcs11Ctx.CloseSession(session)
				pkcs11Ctx.Finalize()
				return nil, fmt.Errorf("è·å–PINè§£å¯†å¯†ç å¤±è´¥: %w", err)
			}
			
			if pinPassword == "" {
				pkcs11Ctx.CloseSession(session)
				pkcs11Ctx.Finalize()
				return nil, fmt.Errorf("PINè§£å¯†å¯†ç ä¸ºç©ºï¼ˆè¯·è®¾ç½®HSM_PIN_PASSWORDç¯å¢ƒå˜é‡æˆ–é…ç½®KMSï¼‰")
			}
			
			// è§£å¯†PIN
			decryptedPIN, err := encryptionManager.DecryptWithPassword([]byte(config.EncryptedPIN), pinPassword)
			if err != nil {
				pkcs11Ctx.CloseSession(session)
				pkcs11Ctx.Finalize()
				return nil, fmt.Errorf("PINè§£å¯†å¤±è´¥: %w", err)
			}
			pin = string(decryptedPIN)
			
			// ç™»å½•
			if err := pkcs11Ctx.Login(session, pin); err != nil {
				pkcs11Ctx.CloseSession(session)
				pkcs11Ctx.Finalize()
				return nil, fmt.Errorf("HSMç™»å½•å¤±è´¥: %w", err)
			}
		}

		// æŸ¥æ‰¾ç­¾åå¯†é’¥
		keyHandle = pkcs11Ctx.FindKeyByLabel(session, config.KeyLabel)
		if keyHandle == 0 {
			pkcs11Ctx.CloseSession(session)
			pkcs11Ctx.Finalize()
			return nil, fmt.Errorf("æŸ¥æ‰¾å¯†é’¥å¤±è´¥ï¼šæœªæ‰¾åˆ°æ ‡ç­¾ä¸º %s çš„å¯†é’¥", config.KeyLabel)
		}

		// è·å–å…¬é’¥
		publicKey, err = pkcs11Ctx.GetPublicKey(session, keyHandle)
		if err != nil {
			// âœ… ä¿®å¤ï¼šå…¬é’¥è·å–å¤±è´¥åº”è¿”å›é”™è¯¯ï¼Œä¸åº”ä½¿ç”¨å ä½ç¬¦
			pkcs11Ctx.CloseSession(session)
			pkcs11Ctx.Finalize()
			return nil, fmt.Errorf("è·å–å…¬é’¥å¤±è´¥: %w", err)
		}

		// å…³é—­ä¸´æ—¶Sessionï¼ˆåˆå§‹åŒ–å®Œæˆåå°†ä»Sessionæ± è·å–ï¼‰
		pkcs11Ctx.CloseSession(session)

		// åˆ›å»ºSessionæ± 
		if pin != "" {
			sessionPoolConfig := &SessionPoolConfig{
				MaxSize:         config.SessionPoolSize,
				PIN:             pin,
				CleanupInterval: 5 * time.Minute,
			}
			var err error
			sessionPool, err = NewSessionPool(pkcs11Ctx, pkcs11Ctx.GetSlotID(), sessionPoolConfig, logger)
			if err != nil {
				pkcs11Ctx.Finalize()
				return nil, fmt.Errorf("åˆ›å»ºSessionæ± å¤±è´¥: %w", err)
			}
		}

		if logger != nil {
			logger.Infof("âœ… HSMSigner PKCS#11åˆå§‹åŒ–æˆåŠŸï¼Œå¯†é’¥æ ‡ç­¾: %s, Slot ID: %d, Sessionæ± å¤§å°: %d", 
				config.KeyLabel, pkcs11Ctx.GetSlotID(), config.SessionPoolSize)
		}
	} else {
		// âœ… ä¿®å¤ï¼šæœªæä¾›PKCS#11åº“è·¯å¾„æ—¶è¿”å›é”™è¯¯ï¼Œä¸å…è®¸å ä½ç¬¦æ¨¡å¼
		return nil, fmt.Errorf("PKCS#11åº“è·¯å¾„ä¸èƒ½ä¸ºç©ºï¼ŒHSMç­¾åå™¨éœ€è¦çœŸå®çš„ç¡¬ä»¶æ”¯æŒ")
	}

	if hashManager == nil {
		return nil, fmt.Errorf("HashManagerä¸èƒ½ä¸ºç©º")
	}

	return &HSMSigner{
		keyLabel:         config.KeyLabel,
		publicKey:        publicKey,
		algorithm:        config.Algorithm,
		txHashClient:     txHashClient,
		logger:           logger,
		pkcs11Ctx:        pkcs11Ctx,
		keyHandle:        keyHandle,
		pin:              pin, // å·²è§£å¯†çš„PINï¼ˆæ˜æ–‡ï¼‰
		sessionPool:      sessionPool,
		encryptionManager: encryptionManager,
		hashManager:      hashManager,
	}, nil
}

// Sign ç­¾åäº¤æ˜“
//
// å®ç° tx.Signer æ¥å£
//
// ğŸ¯ **ç­¾åæµç¨‹**ï¼š
// 1. ä½¿ç”¨gRPCæœåŠ¡è®¡ç®—äº¤æ˜“å“ˆå¸Œ
// 2. è·å–HSM Sessionï¼ˆä»Sessionæ± ï¼‰
// 3. åˆå§‹åŒ–ç­¾åæ“ä½œï¼ˆC_SignInitï¼‰
// 4. æ‰§è¡Œç­¾åï¼ˆC_Signï¼‰
// 5. æ„é€ ç­¾åæ•°æ®
//
// å‚æ•°ï¼š
//   - ctx: ä¸Šä¸‹æ–‡å¯¹è±¡
//   - tx: å¾…ç­¾åçš„äº¤æ˜“
//
// è¿”å›ï¼š
//   - *transaction.SignatureData: ç­¾åæ•°æ®
//   - error: ç­¾åå¤±è´¥çš„åŸå› 
func (s *HSMSigner) Sign(ctx context.Context, tx *transaction.Transaction) (*transaction.SignatureData, error) {
	// 1. ä½¿ç”¨gRPCæœåŠ¡è®¡ç®—äº¤æ˜“å“ˆå¸Œ
	if s.txHashClient == nil {
		return nil, fmt.Errorf("transaction hash client is not initialized")
	}

	req := &transaction.ComputeHashRequest{
		Transaction:      tx,
		IncludeDebugInfo: false,
	}
	resp, err := s.txHashClient.ComputeHash(ctx, req)
	if err != nil {
		return nil, fmt.Errorf("failed to compute transaction hash: %w", err)
	}
	if !resp.IsValid {
		return nil, fmt.Errorf("transaction structure is invalid")
	}
	txHash := resp.Hash

	// è®°å½•ç­¾åè¯·æ±‚
	if s.logger != nil {
		s.logger.Debugf("å¼€å§‹ HSM ç­¾åï¼Œäº¤æ˜“å“ˆå¸Œ: %x", txHash[:8])
	}

	// âœ… **PKCS#11ç­¾åæ“ä½œ**ï¼šå¦‚æœå·²åˆå§‹åŒ–PKCS#11ï¼Œåˆ™ä½¿ç”¨å®é™…ç­¾å
	var signature []byte
	if s.pkcs11Ctx != nil && s.keyHandle != 0 {
		// ä»Sessionæ± è·å–Session
		var session pkcs11.SessionHandle
		var err error
		
		if s.sessionPool != nil {
			// ä½¿ç”¨Sessionæ± 
			session, err = s.sessionPool.AcquireSession(ctx)
			if err != nil {
				return nil, fmt.Errorf("è·å–Sessionå¤±è´¥: %w", err)
			}
			defer s.sessionPool.ReleaseSession(session)
		} else {
			// å›é€€åˆ°ç›´æ¥åˆ›å»ºSessionï¼ˆå‘åå…¼å®¹ï¼‰
			session, err = s.pkcs11Ctx.OpenSession(pkcs11.CKF_SERIAL_SESSION | pkcs11.CKF_RW_SESSION)
			if err != nil {
				return nil, fmt.Errorf("æ‰“å¼€Sessionå¤±è´¥: %w", err)
			}
			defer s.pkcs11Ctx.CloseSession(session)

			// ç™»å½•ï¼ˆå¦‚æœä½¿ç”¨ç›´æ¥åˆ›å»ºæ–¹å¼ï¼‰
			if s.pin != "" {
				if err := s.pkcs11Ctx.Login(session, s.pin); err != nil {
					return nil, fmt.Errorf("HSMç™»å½•å¤±è´¥: %w", err)
				}
				defer s.pkcs11Ctx.Logout(session)
			}
		}

		// æ ¹æ®ç®—æ³•é€‰æ‹©ç­¾åæœºåˆ¶
		var mechanism pkcs11.Mechanism
		switch s.algorithm {
		case transaction.SignatureAlgorithm_SIGNATURE_ALGORITHM_ECDSA_SECP256K1:
			mechanism = *pkcs11.NewMechanism(pkcs11.CKM_ECDSA, nil)
		case transaction.SignatureAlgorithm_SIGNATURE_ALGORITHM_ED25519:
			// âš ï¸ **æ³¨æ„**ï¼šæŸäº›PKCS#11å®ç°å¯èƒ½ä¸æ”¯æŒCKM_EDDSA
			// å¦‚æœç¼–è¯‘é”™è¯¯ï¼Œè¯·æ£€æŸ¥PKCS#11åº“æ˜¯å¦æ”¯æŒEdDSA
			// å¯ä»¥ä½¿ç”¨ CKM_EC_EDWARDS_KEY_PAIR_GEN æˆ–å…¶ä»–å¸¸é‡
			mechanism = *pkcs11.NewMechanism(0x00001057, nil) // CKM_EDDSA (å¦‚æœæ”¯æŒ)
		default:
			return nil, fmt.Errorf("ä¸æ”¯æŒçš„ç­¾åç®—æ³•: %v", s.algorithm)
		}

		// æ‰§è¡Œç­¾å
		signature, err = s.pkcs11Ctx.SignData(session, s.keyHandle, txHash, uint(mechanism.Mechanism))
		if err != nil {
			return nil, fmt.Errorf("HSMç­¾åå¤±è´¥: %w", err)
		}
	} else {
		// âœ… ä¿®å¤ï¼šæœªåˆå§‹åŒ–PKCS#11æ—¶è¿”å›é”™è¯¯ï¼Œä¸å…è®¸å ä½ç¬¦ç­¾å
		return nil, fmt.Errorf("PKCS#11æœªåˆå§‹åŒ–ï¼Œæ— æ³•æ‰§è¡Œç­¾åæ“ä½œ")
	}

	// 5. æ„é€ ç­¾åæ•°æ®
	signatureData := &transaction.SignatureData{
		Value: signature,
	}

	// 6. è®°å½•å®¡è®¡æ—¥å¿—
	if s.logger != nil {
		s.logger.Infof("âœ… HSM ç­¾åæˆåŠŸï¼Œäº¤æ˜“å“ˆå¸Œ: %x, ç­¾åé•¿åº¦: %d", txHash[:8], len(signature))
	}

	return signatureData, nil
}

// SignBytes ç­¾åä»»æ„å­—èŠ‚æ•°æ®
//
// å®ç° tx.Signer æ¥å£ï¼ˆP2-3bæ‰©å±•ï¼‰
//
// ğŸ¯ **æ ¸å¿ƒåŠŸèƒ½**ï¼šå¯¹åŸå§‹å­—èŠ‚æ•°æ®è¿›è¡Œç­¾åï¼ˆä¸æ¶‰åŠäº¤æ˜“ç»“æ„ï¼‰
//
// **ç­¾åæµç¨‹**ï¼š
// 1. éªŒè¯è¾“å…¥æ•°æ®éç©º
// 2. è®¡ç®—æ•°æ®çš„SHA256å“ˆå¸Œ
// 3. è·å–HSM Sessionï¼ˆä»Sessionæ± ï¼‰
// 4. åˆå§‹åŒ–ç­¾åæ“ä½œï¼ˆC_SignInitï¼‰
// 5. æ‰§è¡Œç­¾åï¼ˆC_Signï¼‰
// 6. è¿”å›ç­¾åå­—èŠ‚æ•°ç»„
//
// **ä¸Signæ–¹æ³•çš„åŒºåˆ«**ï¼š
// - Signæ–¹æ³•ï¼šç­¾åå®Œæ•´çš„Transactionå¯¹è±¡ï¼ˆé€šè¿‡gRPCæœåŠ¡è®¡ç®—äº¤æ˜“å“ˆå¸Œï¼‰
// - SignBytesæ–¹æ³•ï¼šç­¾åä»»æ„åŸå§‹å­—èŠ‚æ•°æ®ï¼ˆç›´æ¥å“ˆå¸Œåç­¾åï¼‰
//
// å‚æ•°ï¼š
//   - ctx: ä¸Šä¸‹æ–‡å¯¹è±¡
//   - data: å¾…ç­¾åçš„åŸå§‹å­—èŠ‚æ•°æ®
//
// è¿”å›ï¼š
//   - []byte: ç­¾åå­—èŠ‚æ•°ç»„
//   - error: ç­¾åå¤±è´¥çš„åŸå› 
func (s *HSMSigner) SignBytes(ctx context.Context, data []byte) ([]byte, error) {
	// 1. éªŒè¯è¾“å…¥æ•°æ®éç©º
	if len(data) == 0 {
		return nil, fmt.Errorf("å¾…ç­¾åæ•°æ®ä¸ºç©º")
	}

	// è®°å½•ç­¾åè¯·æ±‚
	if s.logger != nil {
		s.logger.Debugf("å¼€å§‹ HSM ç­¾ååŸå§‹æ•°æ®ï¼Œæ•°æ®é•¿åº¦: %d å­—èŠ‚", len(data))
	}

	// 2. è®¡ç®—æ•°æ®çš„SHA256å“ˆå¸Œ
	// âœ… ä¿®å¤ï¼šä½¿ç”¨ HashManager è€Œä¸æ˜¯ç›´æ¥ä½¿ç”¨ crypto/sha256
	// æ³¨æ„ï¼šHSMé€šå¸¸æœŸæœ›æ¥æ”¶å·²å“ˆå¸Œçš„æ•°æ®ï¼ˆå¯¹äºECDSAç­‰ç®—æ³•ï¼‰
	dataHash := s.hashManager.SHA256(data)

	// âœ… **PKCS#11ç­¾åæ“ä½œ**ï¼šå¦‚æœå·²åˆå§‹åŒ–PKCS#11ï¼Œåˆ™ä½¿ç”¨å®é™…ç­¾å
	var signature []byte
	if s.pkcs11Ctx != nil && s.keyHandle != 0 {
		// ä»Sessionæ± è·å–Session
		var session pkcs11.SessionHandle
		var err error
		
		if s.sessionPool != nil {
			// ä½¿ç”¨Sessionæ± 
			session, err = s.sessionPool.AcquireSession(ctx)
			if err != nil {
				return nil, fmt.Errorf("è·å–Sessionå¤±è´¥: %w", err)
			}
			defer s.sessionPool.ReleaseSession(session)
		} else {
			// å›é€€åˆ°ç›´æ¥åˆ›å»ºSessionï¼ˆå‘åå…¼å®¹ï¼‰
			session, err = s.pkcs11Ctx.OpenSession(pkcs11.CKF_SERIAL_SESSION | pkcs11.CKF_RW_SESSION)
			if err != nil {
				return nil, fmt.Errorf("æ‰“å¼€Sessionå¤±è´¥: %w", err)
			}
			defer s.pkcs11Ctx.CloseSession(session)

			// ç™»å½•ï¼ˆå¦‚æœä½¿ç”¨ç›´æ¥åˆ›å»ºæ–¹å¼ï¼‰
			if s.pin != "" {
				if err := s.pkcs11Ctx.Login(session, s.pin); err != nil {
					return nil, fmt.Errorf("HSMç™»å½•å¤±è´¥: %w", err)
				}
				defer s.pkcs11Ctx.Logout(session)
			}
		}

		// æ ¹æ®ç®—æ³•é€‰æ‹©ç­¾åæœºåˆ¶
		var mechanism uint
		switch s.algorithm {
		case transaction.SignatureAlgorithm_SIGNATURE_ALGORITHM_ECDSA_SECP256K1:
			mechanism = pkcs11.CKM_ECDSA
		case transaction.SignatureAlgorithm_SIGNATURE_ALGORITHM_ED25519:
			// âš ï¸ **æ³¨æ„**ï¼šæŸäº›PKCS#11å®ç°å¯èƒ½ä¸æ”¯æŒCKM_EDDSA
			// å¦‚æœç¼–è¯‘é”™è¯¯ï¼Œè¯·æ£€æŸ¥PKCS#11åº“æ˜¯å¦æ”¯æŒEdDSA
			// å¯ä»¥ä½¿ç”¨ CKM_EC_EDWARDS_KEY_PAIR_GEN æˆ–å…¶ä»–å¸¸é‡
			mechanism = 0x00001057 // CKM_EDDSA (å¦‚æœæ”¯æŒ)
		default:
			return nil, fmt.Errorf("ä¸æ”¯æŒçš„ç­¾åç®—æ³•: %v", s.algorithm)
		}

		// æ‰§è¡Œç­¾å
		signature, err = s.pkcs11Ctx.SignData(session, s.keyHandle, dataHash, mechanism)
		if err != nil {
			return nil, fmt.Errorf("HSMç­¾åå¤±è´¥: %w", err)
		}
	} else {
		// âœ… ä¿®å¤ï¼šæœªåˆå§‹åŒ–PKCS#11æ—¶è¿”å›é”™è¯¯ï¼Œä¸å…è®¸å ä½ç¬¦ç­¾å
		return nil, fmt.Errorf("PKCS#11æœªåˆå§‹åŒ–ï¼Œæ— æ³•æ‰§è¡Œç­¾åæ“ä½œ")
	}

	// 5. è®°å½•å®¡è®¡æ—¥å¿—
	if s.logger != nil {
		s.logger.Infof("âœ… HSM ç­¾ååŸå§‹æ•°æ®æˆåŠŸï¼Œæ•°æ®é•¿åº¦: %d å­—èŠ‚ï¼Œç­¾åé•¿åº¦: %d å­—èŠ‚", len(data), len(signature))
	}

	return signature, nil
}

// PublicKey è¿”å›ç­¾åå™¨å¯¹åº”çš„å…¬é’¥
//
// å®ç° tx.Signer æ¥å£
//
// è¿”å›ï¼š
//   - *transaction.PublicKey: å…¬é’¥å¯¹è±¡
func (s *HSMSigner) PublicKey() *transaction.PublicKey {
	return s.publicKey
}

// Algorithm è¿”å›ç­¾åç®—æ³•
//
// å®ç° tx.Signer æ¥å£
//
// è¿”å›ï¼š
//   - transaction.SignatureAlgorithm: ç­¾åç®—æ³•
func (s *HSMSigner) Algorithm() transaction.SignatureAlgorithm {
	return s.algorithm
}
