// Package signer æä¾›ç­¾åå™¨å®ç°
//
// âœ… **ç”Ÿäº§çº§å®ç°**ï¼šé€‚ç”¨äºç”Ÿäº§ç¯å¢ƒçš„å®‰å…¨å¯†é’¥ç®¡ç†
//
// ğŸ¯ **é€‚ç”¨åœºæ™¯**ï¼š
// - ç”Ÿäº§ç¯å¢ƒï¼šä¼ä¸šçº§å®‰å…¨è¦æ±‚
// - é¢„å‘å¸ƒç¯å¢ƒï¼šæ¥è¿‘ç”Ÿäº§çš„æµ‹è¯•
// - å®¡è®¡è¦æ±‚ï¼šéœ€è¦å®Œæ•´å®¡è®¡æ—¥å¿—
// - åˆè§„è¦æ±‚ï¼šå¯†é’¥ç®¡ç†åˆè§„æ€§
//
// ğŸ”’ **å®‰å…¨ç‰¹æ€§**ï¼š
// - ç§é’¥æ°¸ä¸ç¦»å¼€ KMSï¼šç­¾åæ“ä½œåœ¨ KMS å†…éƒ¨å®Œæˆ
// - è®¿é—®æ§åˆ¶ï¼šåŸºäº IAM/RBAC çš„ç»†ç²’åº¦æƒé™
// - å®¡è®¡æ—¥å¿—ï¼šæ‰€æœ‰ç­¾åæ“ä½œè®°å½•åˆ°å®¡è®¡ç³»ç»Ÿ
// - å¯†é’¥è½®æ¢ï¼šæ”¯æŒè‡ªåŠ¨å¯†é’¥è½®æ¢
// - å¯†é’¥å¤‡ä»½ï¼šKMS æä¾›å•†è´Ÿè´£å¯†é’¥å¤‡ä»½å’Œæ¢å¤
//
// ğŸŒ **æ”¯æŒçš„ KMS æä¾›å•†**ï¼š
// - AWS KMSï¼ˆAmazon Web Servicesï¼‰
// - GCP KMSï¼ˆGoogle Cloud Platformï¼‰
// - Azure Key Vaultï¼ˆMicrosoft Azureï¼‰
// - HashiCorp Vault
// - è‡ªå®šä¹‰ KMSï¼ˆé€šè¿‡ KMSClient æ¥å£ï¼‰
//
// ğŸ“‹ **è®¾è®¡åŸåˆ™**ï¼š
// - æ¥å£æŠ½è±¡ï¼šKMSClient æ¥å£æ”¯æŒå¤šç§ KMS æä¾›å•†
// - é‡è¯•æœºåˆ¶ï¼šè‡ªåŠ¨é‡è¯•ä¸´æ—¶æ€§å¤±è´¥
// - è¶…æ—¶æ§åˆ¶ï¼šé¿å…é•¿æ—¶é—´é˜»å¡
// - é”™è¯¯åˆ†ç±»ï¼šåŒºåˆ†ä¸´æ—¶æ€§é”™è¯¯å’Œæ°¸ä¹…æ€§é”™è¯¯
package signer

import (
	"context"
	"fmt"
	"strings"
	"time"

	"google.golang.org/protobuf/proto"

	transaction "github.com/weisyn/v1/pb/blockchain/block/transaction"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/crypto"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/log"
)

// KMSClient KMS å®¢æˆ·ç«¯æ¥å£ï¼ˆç”¨äºä¾èµ–æ³¨å…¥å’Œæµ‹è¯•ï¼‰
//
// ğŸ¯ **è®¾è®¡ç†å¿µ**ï¼š
// å®šä¹‰æœ€å°åŒ–çš„ KMS æ“ä½œæ¥å£ï¼Œæ”¯æŒå¤šç§ KMS æä¾›å•†å®ç°ã€‚
// ç”Ÿäº§ç¯å¢ƒå¯ä»¥ä½¿ç”¨ AWS SDK / GCP SDK / Azure SDKï¼Œæµ‹è¯•ç¯å¢ƒå¯ä»¥ä½¿ç”¨ mockã€‚
type KMSClient interface {
	// Sign ä½¿ç”¨ KMS å¯†é’¥å¯¹æ•°æ®è¿›è¡Œç­¾å
	//
	// å‚æ•°ï¼š
	//   - ctx: ä¸Šä¸‹æ–‡å¯¹è±¡
	//   - keyID: å¯†é’¥æ ‡è¯†ç¬¦ï¼ˆKMS ç‰¹å®šæ ¼å¼ï¼‰
	//   - data: å¾…ç­¾åçš„æ•°æ®ï¼ˆå·²å“ˆå¸Œï¼‰
	//   - algorithm: ç­¾åç®—æ³•
	//
	// è¿”å›ï¼š
	//   - []byte: ç­¾åå­—èŠ‚
	//   - error: ç­¾åå¤±è´¥çš„åŸå› 
	Sign(ctx context.Context, keyID string, data []byte, algorithm transaction.SignatureAlgorithm) ([]byte, error)

	// GetPublicKey è·å–å¯†é’¥å¯¹åº”çš„å…¬é’¥
	//
	// å‚æ•°ï¼š
	//   - ctx: ä¸Šä¸‹æ–‡å¯¹è±¡
	//   - keyID: å¯†é’¥æ ‡è¯†ç¬¦
	//
	// è¿”å›ï¼š
	//   - *transaction.PublicKey: å…¬é’¥å¯¹è±¡
	//   - error: è·å–å¤±è´¥çš„åŸå› 
	GetPublicKey(ctx context.Context, keyID string) (*transaction.PublicKey, error)

	// VerifyKeyAccess éªŒè¯æ˜¯å¦æœ‰æƒè®¿é—®æŒ‡å®šå¯†é’¥
	//
	// å‚æ•°ï¼š
	//   - ctx: ä¸Šä¸‹æ–‡å¯¹è±¡
	//   - keyID: å¯†é’¥æ ‡è¯†ç¬¦
	//
	// è¿”å›ï¼š
	//   - error: è®¿é—®éªŒè¯å¤±è´¥çš„åŸå› 
	VerifyKeyAccess(ctx context.Context, keyID string) error

	// ListKeys åˆ—å‡ºæ‰€æœ‰å¯è®¿é—®çš„å¯†é’¥
	//
	// å‚æ•°ï¼š
	//   - ctx: ä¸Šä¸‹æ–‡å¯¹è±¡
	//
	// è¿”å›ï¼š
	//   - []string: å¯†é’¥ ID åˆ—è¡¨
	//   - error: åˆ—å‡ºå¤±è´¥çš„åŸå› 
	ListKeys(ctx context.Context) ([]string, error)
}

// KMSSigner KMS ç­¾åå™¨
//
// ğŸ¯ **æ ¸å¿ƒåŠŸèƒ½**ï¼šé€šè¿‡ KMS å¯¹äº¤æ˜“è¿›è¡Œå®‰å…¨ç­¾å
//
// ğŸ”’ **å®‰å…¨ä¿è¯**ï¼š
// - ç§é’¥æ°¸ä¸æš´éœ²ï¼šç­¾åæ“ä½œåœ¨ KMS å†…éƒ¨å®Œæˆ
// - è®¿é—®å®¡è®¡ï¼šæ‰€æœ‰ç­¾åæ“ä½œè®°å½•å®¡è®¡æ—¥å¿—
// - å¯†é’¥éš”ç¦»ï¼šä¸åŒç¯å¢ƒä½¿ç”¨ä¸åŒå¯†é’¥
// - é”™è¯¯æ¢å¤ï¼šè‡ªåŠ¨é‡è¯•æœºåˆ¶
type KMSSigner struct {
	client         KMSClient                           // KMS å®¢æˆ·ç«¯
	keyID          string                              // å¯†é’¥ ID
	publicKey      *transaction.PublicKey              // ç¼“å­˜çš„å…¬é’¥
	algorithm      transaction.SignatureAlgorithm      // ç­¾åç®—æ³•
	txHashClient   transaction.TransactionHashServiceClient // äº¤æ˜“å“ˆå¸ŒæœåŠ¡å®¢æˆ·ç«¯
	hashManager    crypto.HashManager                  // å“ˆå¸Œç®¡ç†å™¨ï¼ˆç”¨äºSignBytesï¼‰
	logger         log.Logger                          // æ—¥å¿—æœåŠ¡
	retryCount     int                                 // é‡è¯•æ¬¡æ•°
	retryDelay     time.Duration                       // é‡è¯•å»¶è¿Ÿ
	signTimeout    time.Duration                       // ç­¾åè¶…æ—¶
}

// KMSSignerConfig KMSSigner é…ç½®
type KMSSignerConfig struct {
	// KMS å¯†é’¥æ ‡è¯†ç¬¦
	// æ ¼å¼ç¤ºä¾‹ï¼š
	//   - AWS KMS: "arn:aws:kms:us-east-1:123456789012:key/12345678-1234-1234-1234-123456789012"
	//   - GCP KMS: "projects/my-project/locations/global/keyRings/my-keyring/cryptoKeys/my-key"
	//   - Azure: "https://my-vault.vault.azure.net/keys/my-key/version"
	//   - Vault: "transit/keys/my-key"
	KeyID string

	// ç­¾åç®—æ³•
	Algorithm transaction.SignatureAlgorithm

	// é‡è¯•é…ç½®
	RetryCount int           // é‡è¯•æ¬¡æ•°ï¼ˆé»˜è®¤ 3ï¼‰
	RetryDelay time.Duration // é‡è¯•å»¶è¿Ÿï¼ˆé»˜è®¤ 100msï¼‰

	// è¶…æ—¶é…ç½®
	SignTimeout time.Duration // ç­¾åè¶…æ—¶ï¼ˆé»˜è®¤ 5sï¼‰

	// ç¯å¢ƒæ ‡è¯†ï¼ˆç”¨äºæ—¥å¿—å’Œç›‘æ§ï¼‰
	Environment string
}

// DefaultKMSSignerConfig è¿”å›é»˜è®¤é…ç½®
func DefaultKMSSignerConfig() *KMSSignerConfig {
	return &KMSSignerConfig{
		Algorithm:   transaction.SignatureAlgorithm_SIGNATURE_ALGORITHM_ECDSA_SECP256K1,
		RetryCount:  3,
		RetryDelay:  100 * time.Millisecond,
		SignTimeout: 5 * time.Second,
		Environment: "production",
	}
}

// NewKMSSigner åˆ›å»º KMS ç­¾åå™¨å®ä¾‹
//
// å‚æ•°ï¼š
//   - config: ç­¾åå™¨é…ç½®
//   - client: KMS å®¢æˆ·ç«¯ï¼ˆéœ€å®ç° KMSClient æ¥å£ï¼‰
//   - txHashClient: äº¤æ˜“å“ˆå¸ŒæœåŠ¡å®¢æˆ·ç«¯ï¼ˆç”¨äºè®¡ç®—äº¤æ˜“å“ˆå¸Œï¼‰
//   - hashManager: å“ˆå¸Œç®¡ç†å™¨ï¼ˆç”¨äºSignBytesæ–¹æ³•ï¼‰
//   - logger: æ—¥å¿—æœåŠ¡
//
// è¿”å›ï¼š
//   - *KMSSigner: ç­¾åå™¨å®ä¾‹
//   - error: åˆ›å»ºå¤±è´¥ï¼ˆå¯†é’¥æ— æ•ˆã€æ— è®¿é—®æƒé™ç­‰ï¼‰
func NewKMSSigner(
	config *KMSSignerConfig,
	client KMSClient,
	txHashClient transaction.TransactionHashServiceClient,
	hashManager crypto.HashManager,
	logger log.Logger,
) (*KMSSigner, error) {
	if config == nil {
		config = DefaultKMSSignerConfig()
	}

	if client == nil {
		return nil, fmt.Errorf("KMS client cannot be nil")
	}

	if txHashClient == nil {
		return nil, fmt.Errorf("transaction hash client cannot be nil")
	}

	if hashManager == nil {
		return nil, fmt.Errorf("hash manager cannot be nil")
	}

	if config.KeyID == "" {
		return nil, fmt.Errorf("key ID cannot be empty")
	}

	// éªŒè¯å¯†é’¥è®¿é—®æƒé™
	ctx, cancel := context.WithTimeout(context.Background(), 5*time.Second)
	defer cancel()

	if err := client.VerifyKeyAccess(ctx, config.KeyID); err != nil {
		return nil, fmt.Errorf("failed to verify key access: %w", err)
	}

	// è·å–å…¬é’¥
	publicKey, err := client.GetPublicKey(ctx, config.KeyID)
	if err != nil {
		return nil, fmt.Errorf("failed to get public key: %w", err)
	}

	signer := &KMSSigner{
		client:       client,
		keyID:        config.KeyID,
		publicKey:    publicKey,
		algorithm:    config.Algorithm,
		txHashClient: txHashClient,
		hashManager:  hashManager,
		logger:       logger,
		retryCount:   config.RetryCount,
		retryDelay:   config.RetryDelay,
		signTimeout:  config.SignTimeout,
	}

	// æ‰“å°åˆå§‹åŒ–æ—¥å¿—
	if logger != nil {
		logger.Info("âœ… KMSSigner åˆå§‹åŒ–æˆåŠŸ")
		logger.Infof("   å¯†é’¥ ID: %s", maskKeyID(config.KeyID))
		logger.Infof("   ç®—æ³•: %s", config.Algorithm.String())
		logger.Infof("   ç¯å¢ƒ: %s", config.Environment)
		logger.Infof("   é‡è¯•æ¬¡æ•°: %d", config.RetryCount)
		logger.Infof("   ç­¾åè¶…æ—¶: %s", config.SignTimeout)
	}

	return signer, nil
}

// Sign å¯¹äº¤æ˜“è¿›è¡Œç­¾å
//
// å®ç° tx.Signer æ¥å£
//
// ğŸ¯ **ç­¾åæµç¨‹**ï¼š
// 1. åºåˆ—åŒ–äº¤æ˜“ä¸ºå¾…ç­¾åæ•°æ®
// 2. è®¡ç®—äº¤æ˜“å“ˆå¸Œ
// 3. è°ƒç”¨ KMS è¿›è¡Œç­¾åï¼ˆå¸¦é‡è¯•æœºåˆ¶ï¼‰
// 4. è®°å½•å®¡è®¡æ—¥å¿—
//
// å‚æ•°ï¼š
//   - ctx: ä¸Šä¸‹æ–‡å¯¹è±¡
//   - tx: å¾…ç­¾åçš„äº¤æ˜“
//
// è¿”å›ï¼š
//   - *transaction.SignatureData: ç­¾åæ•°æ®
//   - error: ç­¾åå¤±è´¥çš„åŸå› 
func (s *KMSSigner) Sign(ctx context.Context, tx *transaction.Transaction) (*transaction.SignatureData, error) {
	// 1. ä½¿ç”¨ gRPC æœåŠ¡è®¡ç®—äº¤æ˜“å“ˆå¸Œ
	if s.txHashClient == nil {
		return nil, fmt.Errorf("transaction hash client is not initialized")
	}

	req := &transaction.ComputeHashRequest{
		Transaction:     tx,
		IncludeDebugInfo: false,
	}
	resp, err := s.txHashClient.ComputeHash(ctx, req)
	if err != nil {
		return nil, fmt.Errorf("failed to compute transaction hash: %w", err)
	}
	if !resp.IsValid {
		return nil, fmt.Errorf("transaction structure is invalid")
	}
	txHash := resp.Hash

	// è®°å½•ç­¾åè¯·æ±‚
	if s.logger != nil {
		s.logger.Debugf("å¼€å§‹ KMS ç­¾åï¼Œäº¤æ˜“å“ˆå¸Œ: %x", txHash[:8])
	}

	// 3. åˆ›å»ºç­¾åä¸Šä¸‹æ–‡ï¼ˆå¸¦è¶…æ—¶ï¼‰
	signCtx, cancel := context.WithTimeout(ctx, s.signTimeout)
	defer cancel()

	// 4. è°ƒç”¨ KMS ç­¾åï¼ˆå¸¦é‡è¯•ï¼‰
	var signature []byte
	var lastErr error

	for attempt := 0; attempt <= s.retryCount; attempt++ {
		if attempt > 0 {
			// é‡è¯•å»¶è¿Ÿ
			if s.logger != nil {
				s.logger.Warnf("KMS ç­¾åé‡è¯• %d/%d", attempt, s.retryCount)
			}
			time.Sleep(s.retryDelay)
		}

		signature, lastErr = s.client.Sign(signCtx, s.keyID, txHash, s.algorithm)
		if lastErr == nil {
			break // ç­¾åæˆåŠŸ
		}

		// åˆ¤æ–­æ˜¯å¦ä¸ºä¸´æ—¶æ€§é”™è¯¯ï¼Œå†³å®šæ˜¯å¦é‡è¯•
		if !isRetryableError(lastErr) {
			break // æ°¸ä¹…æ€§é”™è¯¯ï¼Œä¸é‡è¯•
		}
	}

	if lastErr != nil {
		if s.logger != nil {
			s.logger.Errorf("KMS ç­¾åå¤±è´¥: %v", lastErr)
		}
		return nil, fmt.Errorf("KMS sign failed after %d retries: %w", s.retryCount, lastErr)
	}

	// 5. æ„é€ ç­¾åæ•°æ®
	signatureData := &transaction.SignatureData{
		Value: signature,
	}

	// 6. è®°å½•å®¡è®¡æ—¥å¿—
	if s.logger != nil {
		s.logger.Infof("âœ… KMS ç­¾åæˆåŠŸï¼Œäº¤æ˜“å“ˆå¸Œ: %x, ç­¾åé•¿åº¦: %d", txHash[:8], len(signature))
	}

	return signatureData, nil
}

// PublicKey è¿”å›ç­¾åå™¨å¯¹åº”çš„å…¬é’¥
//
// å®ç° tx.Signer æ¥å£
//
// è¿”å›ï¼š
//   - *transaction.PublicKey: å…¬é’¥å¯¹è±¡
func (s *KMSSigner) PublicKey() *transaction.PublicKey {
	return s.publicKey
}

// Algorithm è¿”å›ç­¾åç®—æ³•
//
// å®ç° tx.Signer æ¥å£
//
// è¿”å›ï¼š
//   - transaction.SignatureAlgorithm: ç­¾åç®—æ³•
func (s *KMSSigner) Algorithm() transaction.SignatureAlgorithm {
	return s.algorithm
}

// SignBytes ç­¾åä»»æ„å­—èŠ‚æ•°æ®
//
// å®ç° tx.Signer æ¥å£ï¼ˆP2-3bæ‰©å±•ï¼‰
//
// ğŸ¯ **æ ¸å¿ƒåŠŸèƒ½**ï¼šå¯¹åŸå§‹å­—èŠ‚æ•°æ®è¿›è¡Œç­¾åï¼ˆä¸æ¶‰åŠäº¤æ˜“ç»“æ„ï¼‰
//
// **ç­¾åæµç¨‹**ï¼š
// 1. éªŒè¯è¾“å…¥æ•°æ®éç©º
// 2. è®¡ç®—æ•°æ®çš„SHA256å“ˆå¸Œï¼ˆKMSæœŸæœ›æ¥æ”¶å·²å“ˆå¸Œçš„æ•°æ®ï¼‰
// 3. è°ƒç”¨KMSå®¢æˆ·ç«¯ç­¾åå“ˆå¸Œæ•°æ®
// 4. è¿”å›ç­¾åå­—èŠ‚æ•°ç»„
//
// **ä¸Signæ–¹æ³•çš„åŒºåˆ«**ï¼š
// - Signæ–¹æ³•ï¼šç­¾åå®Œæ•´çš„Transactionå¯¹è±¡ï¼ˆé€šè¿‡gRPCæœåŠ¡è®¡ç®—äº¤æ˜“å“ˆå¸Œï¼‰
// - SignBytesæ–¹æ³•ï¼šç­¾åä»»æ„åŸå§‹å­—èŠ‚æ•°æ®ï¼ˆç›´æ¥å“ˆå¸Œåç­¾åï¼‰
//
// å‚æ•°ï¼š
//   - ctx: ä¸Šä¸‹æ–‡å¯¹è±¡
//   - data: å¾…ç­¾åçš„åŸå§‹å­—èŠ‚æ•°æ®
//
// è¿”å›ï¼š
//   - []byte: ç­¾åå­—èŠ‚æ•°ç»„
//   - error: ç­¾åå¤±è´¥çš„åŸå› 
func (s *KMSSigner) SignBytes(ctx context.Context, data []byte) ([]byte, error) {
	// 1. éªŒè¯è¾“å…¥æ•°æ®éç©º
	if len(data) == 0 {
		return nil, fmt.Errorf("å¾…ç­¾åæ•°æ®ä¸ºç©º")
	}

	// è®°å½•ç­¾åè¯·æ±‚
	if s.logger != nil {
		s.logger.Debugf("å¼€å§‹ KMS ç­¾ååŸå§‹æ•°æ®ï¼Œæ•°æ®é•¿åº¦: %d å­—èŠ‚", len(data))
	}

	// 2. è®¡ç®—æ•°æ®çš„SHA256å“ˆå¸Œ
	// âœ… ä¿®å¤ï¼šä½¿ç”¨ HashManager è€Œä¸æ˜¯ç›´æ¥ä½¿ç”¨ crypto/sha256
	// æ³¨æ„ï¼šKMS.Signæ–¹æ³•æœŸæœ›æ¥æ”¶å·²å“ˆå¸Œçš„æ•°æ®ï¼ˆæ ¹æ®KMSClientæ¥å£æ³¨é‡Šï¼‰
	dataHash := s.hashManager.SHA256(data)

	// 3. åˆ›å»ºç­¾åä¸Šä¸‹æ–‡ï¼ˆå¸¦è¶…æ—¶ï¼‰
	signCtx, cancel := context.WithTimeout(ctx, s.signTimeout)
	defer cancel()

	// 4. è°ƒç”¨ KMS ç­¾åï¼ˆå¸¦é‡è¯•ï¼‰
	var signature []byte
	var lastErr error

	for attempt := 0; attempt <= s.retryCount; attempt++ {
		if attempt > 0 {
			// é‡è¯•å»¶è¿Ÿ
			if s.logger != nil {
				s.logger.Warnf("KMS ç­¾ååŸå§‹æ•°æ®é‡è¯• %d/%d", attempt, s.retryCount)
			}
			time.Sleep(s.retryDelay)
		}

		signature, lastErr = s.client.Sign(signCtx, s.keyID, dataHash, s.algorithm)
		if lastErr == nil {
			break // ç­¾åæˆåŠŸ
		}

		// åˆ¤æ–­æ˜¯å¦ä¸ºä¸´æ—¶æ€§é”™è¯¯ï¼Œå†³å®šæ˜¯å¦é‡è¯•
		if !isRetryableError(lastErr) {
			break // æ°¸ä¹…æ€§é”™è¯¯ï¼Œä¸é‡è¯•
		}
	}

	if lastErr != nil {
		if s.logger != nil {
			s.logger.Errorf("KMS ç­¾ååŸå§‹æ•°æ®å¤±è´¥: %v", lastErr)
		}
		return nil, fmt.Errorf("KMS sign bytes failed after %d retries: %w", s.retryCount, lastErr)
	}

	// 5. è®°å½•å®¡è®¡æ—¥å¿—
	if s.logger != nil {
		s.logger.Infof("âœ… KMS ç­¾ååŸå§‹æ•°æ®æˆåŠŸï¼Œæ•°æ®é•¿åº¦: %d å­—èŠ‚ï¼Œç­¾åé•¿åº¦: %d å­—èŠ‚", len(data), len(signature))
	}

	return signature, nil
}

// RefreshPublicKey åˆ·æ–°å…¬é’¥ç¼“å­˜
//
// æ‰©å±•æ–¹æ³•ï¼ˆé tx.Signer æ¥å£å®šä¹‰ï¼‰
//
// ğŸ¯ **ä½¿ç”¨åœºæ™¯**ï¼š
// - å¯†é’¥è½®æ¢åæ›´æ–°å…¬é’¥
// - å®šæœŸåˆ·æ–°å…¬é’¥ç¼“å­˜
//
// å‚æ•°ï¼š
//   - ctx: ä¸Šä¸‹æ–‡å¯¹è±¡
//
// è¿”å›ï¼š
//   - error: åˆ·æ–°å¤±è´¥çš„åŸå› 
func (s *KMSSigner) RefreshPublicKey(ctx context.Context) error {
	publicKey, err := s.client.GetPublicKey(ctx, s.keyID)
	if err != nil {
		return fmt.Errorf("failed to refresh public key: %w", err)
	}

	s.publicKey = publicKey

	if s.logger != nil {
		s.logger.Info("âœ… å…¬é’¥ç¼“å­˜å·²åˆ·æ–°")
	}

	return nil
}

// VerifyAccess éªŒè¯å½“å‰æ˜¯å¦æœ‰æƒè®¿é—® KMS å¯†é’¥
//
// æ‰©å±•æ–¹æ³•ï¼ˆé tx.Signer æ¥å£å®šä¹‰ï¼‰
//
// ğŸ¯ **ä½¿ç”¨åœºæ™¯**ï¼š
// - å¥åº·æ£€æŸ¥
// - å¯åŠ¨æ—¶éªŒè¯
// - å®šæœŸæƒé™æ£€æŸ¥
//
// å‚æ•°ï¼š
//   - ctx: ä¸Šä¸‹æ–‡å¯¹è±¡
//
// è¿”å›ï¼š
//   - error: è®¿é—®éªŒè¯å¤±è´¥çš„åŸå› 
func (s *KMSSigner) VerifyAccess(ctx context.Context) error {
	return s.client.VerifyKeyAccess(ctx, s.keyID)
}

// maskKeyID æ©ç å¯†é’¥ IDï¼ˆç”¨äºæ—¥å¿—è¾“å‡ºï¼Œé¿å…æ•æ„Ÿä¿¡æ¯æ³„éœ²ï¼‰
//
// ç¤ºä¾‹ï¼š
//   - è¾“å…¥ï¼šarn:aws:kms:us-east-1:123456789012:key/12345678-1234-1234-1234-123456789012
//   - è¾“å‡ºï¼šarn:aws:kms:us-east-1:123456789012:key/1234****-****-****-****-********9012
func maskKeyID(keyID string) string {
	if len(keyID) < 20 {
		// å¤ªçŸ­ï¼Œåªæ˜¾ç¤ºå‰4å4
		if len(keyID) <= 8 {
			return "****"
		}
		return keyID[:4] + "****" + keyID[len(keyID)-4:]
	}

	// æ˜¾ç¤ºå‰20å12ï¼Œä¸­é—´æ©ç 
	return keyID[:20] + "****" + keyID[len(keyID)-12:]
}

// isRetryableError åˆ¤æ–­é”™è¯¯æ˜¯å¦å¯é‡è¯•
//
// ğŸ¯ **é‡è¯•ç­–ç•¥**ï¼š
// - ç½‘ç»œé”™è¯¯ï¼šå¯é‡è¯•
// - è¶…æ—¶é”™è¯¯ï¼šå¯é‡è¯•
// - é™æµé”™è¯¯ï¼šå¯é‡è¯•
// - æƒé™é”™è¯¯ï¼šä¸å¯é‡è¯•
// - å¯†é’¥ä¸å­˜åœ¨ï¼šä¸å¯é‡è¯•
func isRetryableError(err error) bool {
	if err == nil {
		return false
	}

	errStr := err.Error()

	// å¯é‡è¯•çš„é”™è¯¯æ¨¡å¼
	retryablePatterns := []string{
		"timeout",
		"deadline exceeded",
		"connection refused",
		"connection reset",
		"temporary failure",
		"throttling",
		"rate limit",
		"service unavailable",
		"internal server error",
	}

	for _, pattern := range retryablePatterns {
		if contains(errStr, pattern) {
			return true
		}
	}

	// ä¸å¯é‡è¯•çš„é”™è¯¯æ¨¡å¼
	nonRetryablePatterns := []string{
		"not found",
		"invalid key",
		"access denied",
		"permission denied",
		"unauthorized",
		"forbidden",
		"invalid signature",
	}

	for _, pattern := range nonRetryablePatterns {
		if contains(errStr, pattern) {
			return false
		}
	}

	// é»˜è®¤ä¸é‡è¯•ï¼ˆä¿å®ˆç­–ç•¥ï¼‰
	return false
}

// contains æ£€æŸ¥å­—ç¬¦ä¸²æ˜¯å¦åŒ…å«å­ä¸²ï¼ˆä¸åŒºåˆ†å¤§å°å†™ï¼‰
func contains(s, substr string) bool {
	return len(s) >= len(substr) && (s == substr ||
		len(s) > len(substr) && containsIgnoreCase(s, substr))
}

// containsIgnoreCase ä¸åŒºåˆ†å¤§å°å†™çš„å­—ç¬¦ä¸²åŒ…å«æ£€æŸ¥
func containsIgnoreCase(s, substr string) bool {
	s = toLower(s)
	substr = toLower(substr)
	for i := 0; i <= len(s)-len(substr); i++ {
		if s[i:i+len(substr)] == substr {
			return true
		}
	}
	return false
}

// toLower è½¬å°å†™ï¼ˆä½¿ç”¨æ ‡å‡†åº“ï¼Œæ”¯æŒ Unicodeï¼‰
// âœ… ä¿®å¤ï¼šä½¿ç”¨æ ‡å‡†åº“ strings.ToLower æ›¿ä»£ç®€åŒ–å®ç°
func toLower(s string) string {
	return strings.ToLower(s)
}

// serializeTransaction åºåˆ—åŒ–äº¤æ˜“ä¸ºå­—èŠ‚æ•°ç»„ï¼ˆç”¨äºè®¡ç®—å“ˆå¸Œï¼‰
//
// ğŸ¯ **è§„èŒƒåŒ–åºåˆ—åŒ–**ï¼š
// ä½¿ç”¨ protobuf Marshal è¿›è¡Œè§„èŒƒåŒ–åºåˆ—åŒ–ï¼Œç¡®ä¿ç­¾åçš„ä¸€è‡´æ€§ã€‚
//
// âš ï¸ **ç­¾åæ³¨æ„äº‹é¡¹**ï¼š
// ç­¾åæ—¶ä¸åº”åŒ…å« signatures å­—æ®µæœ¬èº«ï¼Œå¦åˆ™ä¼šäº§ç”Ÿå¾ªç¯ä¾èµ–ã€‚
// è¿™é‡Œåºåˆ—åŒ–å®Œæ•´äº¤æ˜“ï¼Œä½†åœ¨å®é™…ç­¾åéªŒè¯æ—¶éœ€è¦æ¸…é™¤ signatures å­—æ®µã€‚
//
// å‚æ•°ï¼š
//   - tx: å¾…åºåˆ—åŒ–çš„äº¤æ˜“
//
// è¿”å›ï¼š
//   - []byte: åºåˆ—åŒ–çš„å­—èŠ‚æ•°ç»„
//   - error: åºåˆ—åŒ–å¤±è´¥çš„åŸå› 
func serializeTransaction(tx *transaction.Transaction) ([]byte, error) {
	if tx == nil {
		return nil, fmt.Errorf("transaction cannot be nil")
	}

	// ä½¿ç”¨ protobuf Marshal è¿›è¡Œè§„èŒƒåŒ–åºåˆ—åŒ–
	// proto.Marshal ä¼šæŒ‰ç…§ protobuf çš„è§„èŒƒè¿›è¡Œåºåˆ—åŒ–ï¼Œç¡®ä¿ä¸€è‡´æ€§
	txBytes, err := proto.Marshal(tx)
	if err != nil {
		return nil, fmt.Errorf("failed to marshal transaction: %w", err)
	}

	return txBytes, nil
}
